book draft 4.0 time-stamped versions in progress

--- a/000_0-sds-3-x-projects/student-project-07_group-MathAtKTH/01_Coding_Motifs.html
+++ b/000_0-sds-3-x-projects/student-project-07_group-MathAtKTH/01_Coding_Motifs.html
@@ -1698,7 +1698,7 @@ preform.</p>
 “count<em>K4(rat</em>brain<em>graph)” we run out of memory. This is because we do
 not use any of the structure of the graphs. Finding graphical simplicies
 can be made a lot quicker since we can use the structure of the graph
-<span class="math notranslate nohighlight">\(K*n\)</span> and the structure of the “rat</em>brain*graph”.</p>
+<span class="math notranslate nohighlight">\(K_n\)</span> and the structure of the “rat</em>brain_graph”.</p>
 <p>How this can be done quicker can be read in “Computing persistent
 homology of directed flag complexes” by Daniel Luetgehetmann, Dejan
 Govc, Jason Smith, and Ran Levi (https://arxiv.org/abs/1906.10458).</p>
