--- a/000_0-sds-3-x-projects/student-project-08_group-DistributedEnsemble/00_project.html
+++ b/000_0-sds-3-x-projects/student-project-08_group-DistributedEnsemble/00_project.html
@@ -1401,8 +1401,7 @@ using Spark. This is not only to avoid distributing the training data
 over several nodes during training but also to package the ensemble
 members in a way that makes it possible for us to send them between the
 driver and the worker nodes prior to and at the end of training.</p>
-<p>&lt;img
-src=”files/shared<em>uploads/amanda.olmin&#64;liu.se/distributed</em>fig_small.png”/&gt;</p>
+<img src="files/shared_uploads/amanda.olmin@liu.se/distributed_fig_small.png"/>
 </div>
 </div>
 <div class="section" id="imports">
