--- a/000_0-sds-3-x-projects/student-project-08_group-DistributedEnsemble/development/loading_data.html
+++ b/000_0-sds-3-x-projects/student-project-08_group-DistributedEnsemble/development/loading_data.html
@@ -1431,7 +1431,322 @@ European Modeling and Simulation Symposium-EMSS, Larnaca, Cyprus. 2016
 </div>
 </div>
 </div>
-<p>[TABLE]</p>
+<table>
+<thead>
+<tr class="header">
+<th>step</th>
+<th>type</th>
+<th>amount</th>
+<th>oldbalanceOrg</th>
+<th>newbalanceOrig</th>
+<th>oldbalanceDest</th>
+<th>newbalanceDest</th>
+<th>isFraud</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>9839.64</td>
+<td>170136.0</td>
+<td>160296.36</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="even">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>1864.28</td>
+<td>21249.0</td>
+<td>19384.72</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="odd">
+<td>1.0</td>
+<td>TRANSFER</td>
+<td>181.0</td>
+<td>181.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr class="even">
+<td>1.0</td>
+<td>CASH_OUT</td>
+<td>181.0</td>
+<td>181.0</td>
+<td>0.0</td>
+<td>21182.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr class="odd">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>11668.14</td>
+<td>41554.0</td>
+<td>29885.86</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="even">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>7817.71</td>
+<td>53860.0</td>
+<td>46042.29</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="odd">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>7107.77</td>
+<td>183195.0</td>
+<td>176087.23</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="even">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>7861.64</td>
+<td>176087.23</td>
+<td>168225.59</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="odd">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>4024.36</td>
+<td>2671.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="even">
+<td>1.0</td>
+<td>DEBIT</td>
+<td>5337.77</td>
+<td>41720.0</td>
+<td>36382.23</td>
+<td>41898.0</td>
+<td>40348.79</td>
+<td>0.0</td>
+</tr>
+<tr class="odd">
+<td>1.0</td>
+<td>DEBIT</td>
+<td>9644.94</td>
+<td>4465.0</td>
+<td>0.0</td>
+<td>10845.0</td>
+<td>157982.12</td>
+<td>0.0</td>
+</tr>
+<tr class="even">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>3099.97</td>
+<td>20771.0</td>
+<td>17671.03</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="odd">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>2560.74</td>
+<td>5070.0</td>
+<td>2509.26</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="even">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>11633.76</td>
+<td>10127.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="odd">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>4098.78</td>
+<td>503264.0</td>
+<td>499165.22</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="even">
+<td>1.0</td>
+<td>CASH_OUT</td>
+<td>229133.94</td>
+<td>15325.0</td>
+<td>0.0</td>
+<td>5083.0</td>
+<td>51513.44</td>
+<td>0.0</td>
+</tr>
+<tr class="odd">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>1563.82</td>
+<td>450.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="even">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>1157.86</td>
+<td>21156.0</td>
+<td>19998.14</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="odd">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>671.64</td>
+<td>15123.0</td>
+<td>14451.36</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="even">
+<td>1.0</td>
+<td>TRANSFER</td>
+<td>215310.3</td>
+<td>705.0</td>
+<td>0.0</td>
+<td>22425.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="odd">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>1373.43</td>
+<td>13854.0</td>
+<td>12480.57</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="even">
+<td>1.0</td>
+<td>DEBIT</td>
+<td>9302.79</td>
+<td>11299.0</td>
+<td>1996.21</td>
+<td>29832.0</td>
+<td>16896.7</td>
+<td>0.0</td>
+</tr>
+<tr class="odd">
+<td>1.0</td>
+<td>DEBIT</td>
+<td>1065.41</td>
+<td>1817.0</td>
+<td>751.59</td>
+<td>10330.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="even">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>3876.41</td>
+<td>67852.0</td>
+<td>63975.59</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="odd">
+<td>1.0</td>
+<td>TRANSFER</td>
+<td>311685.89</td>
+<td>10835.0</td>
+<td>0.0</td>
+<td>6267.0</td>
+<td>2719172.89</td>
+<td>0.0</td>
+</tr>
+<tr class="even">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>6061.13</td>
+<td>443.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="odd">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>9478.39</td>
+<td>116494.0</td>
+<td>107015.61</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="even">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>8009.09</td>
+<td>10968.0</td>
+<td>2958.91</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="odd">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>8901.99</td>
+<td>2958.91</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr class="even">
+<td>1.0</td>
+<td>PAYMENT</td>
+<td>9920.52</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+</tbody>
+</table>
 <p>Truncated to 30 rows</p>
 <div class="cell docutils container">
 <div class="cell_input docutils container">
