--- a/000_0-sds-3-x-projects/student-project-09_group-TopicModeling/03_LDA.html
+++ b/000_0-sds-3-x-projects/student-project-09_group-TopicModeling/03_LDA.html
@@ -2562,6 +2562,278 @@ termRDD2: org.apache.spark.rdd.RDD[(String, Double, Int)] = MapPartitionsRDD[829
 </div>
 </div>
 </div>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<style>
+<p>circle {
+fill: rgb(31, 119, 180);
+fill-opacity: 0.5;
+stroke: rgb(31, 119, 180);
+stroke-width: 1px;
+}</p>
+<p>.leaf circle {
+fill: #ff7f0e;
+fill-opacity: 1;
+}</p>
+<p>text {
+font: 14px sans-serif;
+}</p>
+</style>
+<body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+<script>
+<p>var json = {
+“name”: “data”,
+“children”: [
+{
+“name”: “topics”,
+“children”: [
+{“term”:”aaa”,”probability”:0.13131543650186733,”topicId”:0},
+{“term”:”ttt”,”probability”:0.07527114848360429,”topicId”:0},
+{“term”:”caa”,”probability”:0.07135461182849644,”topicId”:0},
+{“term”:”tca”,”probability”:0.0686676695645471,”topicId”:0},
+{“term”:”aca”,”probability”:0.0682272864770198,”topicId”:0},
+{“term”:”cca”,”probability”:0.042410198142041916,”topicId”:0},
+{“term”:”aac”,”probability”:0.041688158000092713,”topicId”:0},
+{“term”:”cga”,”probability”:0.039750957604586946,”topicId”:0},
+{“term”:”gga”,”probability”:0.033574925939461,”topicId”:0},
+{“term”:”act”,”probability”:0.031983245462294564,”topicId”:0},
+{“term”:”tta”,”probability”:0.2045738779164489,”topicId”:1},
+{“term”:”ctt”,”probability”:0.12552474142776435,”topicId”:1},
+{“term”:”aag”,”probability”:0.12281910412100323,”topicId”:1},
+{“term”:”att”,”probability”:0.09544738898234381,”topicId”:1},
+{“term”:”ttg”,”probability”:0.08943498040951323,”topicId”:1},
+{“term”:”cta”,”probability”:0.07217060937253246,”topicId”:1},
+{“term”:”gta”,”probability”:0.07107253249067667,”topicId”:1},
+{“term”:”cag”,”probability”:0.06059690672969983,”topicId”:1},
+{“term”:”ctc”,”probability”:0.052955711044136405,”topicId”:1},
+{“term”:”gtg”,”probability”:0.02543376284487667,”topicId”:1},
+{“term”:”att”,”probability”:0.1771773579445795,”topicId”:2},
+{“term”:”aca”,”probability”:0.1273508073428366,”topicId”:2},
+{“term”:”ctt”,”probability”:0.12417703909804925,”topicId”:2},
+{“term”:”tta”,”probability”:0.10088919432568136,”topicId”:2},
+{“term”:”ttg”,”probability”:0.07025874336577707,”topicId”:2},
+{“term”:”caa”,”probability”:0.06781849637448154,”topicId”:2},
+{“term”:”ata”,”probability”:0.06551643079794925,”topicId”:2},
+{“term”:”gta”,”probability”:0.0566203488787403,”topicId”:2},
+{“term”:”cag”,”probability”:0.050952344374832294,”topicId”:2},
+{“term”:”tca”,”probability”:0.05064669189688532,”topicId”:2},
+{“term”:”ttt”,”probability”:0.12900506402878842,”topicId”:3},
+{“term”:”tct”,”probability”:0.08187154980316187,”topicId”:3},
+{“term”:”caa”,”probability”:0.0804903536037813,”topicId”:3},
+{“term”:”agt”,”probability”:0.06820785348113596,”topicId”:3},
+{“term”:”tat”,”probability”:0.06403202450597477,”topicId”:3},
+{“term”:”ggc”,”probability”:0.06354048211661752,”topicId”:3},
+{“term”:”aat”,”probability”:0.059722422879030124,”topicId”:3},
+{“term”:”aaa”,”probability”:0.05764305780933505,”topicId”:3},
+{“term”:”act”,”probability”:0.056823028552883896,”topicId”:3},
+{“term”:”tac”,”probability”:0.05050462429017033,”topicId”:3},
+{“term”:”tag”,”probability”:0.280789956368097,”topicId”:4},
+{“term”:”cac”,”probability”:0.14884669801130576,”topicId”:4},
+{“term”:”tta”,”probability”:0.12363916305747652,”topicId”:4},
+{“term”:”agg”,”probability”:0.06715808907042371,”topicId”:4},
+{“term”:”cat”,”probability”:0.05808903649551852,”topicId”:4},
+{“term”:”ctc”,”probability”:0.035200330930716894,”topicId”:4},
+{“term”:”ttg”,”probability”:0.0325620539187323,”topicId”:4},
+{“term”:”acg”,”probability”:0.02912154147106237,”topicId”:4},
+{“term”:”atc”,”probability”:0.02758866266257834,”topicId”:4},
+{“term”:”aac”,”probability”:0.027547370865081168,”topicId”:4},
+{“term”:”att”,”probability”:0.11591805759819132,”topicId”:5},
+{“term”:”aca”,”probability”:0.08452545717333106,”topicId”:5},
+{“term”:”aac”,”probability”:0.08232998329440071,”topicId”:5},
+{“term”:”ttg”,”probability”:0.07645773366533996,”topicId”:5},
+{“term”:”ctt”,”probability”:0.07292660037841622,”topicId”:5},
+{“term”:”tta”,”probability”:0.06979775260163676,”topicId”:5},
+{“term”:”tca”,”probability”:0.06377736116678143,”topicId”:5},
+{“term”:”atc”,”probability”:0.0636127848169404,”topicId”:5},
+{“term”:”ctc”,”probability”:0.05333310944153443,”topicId”:5},
+{“term”:”aaa”,”probability”:0.0403129870403956,”topicId”:5},
+{“term”:”caa”,”probability”:0.09381881392542014,”topicId”:6},
+{“term”:”aca”,”probability”:0.07294005855217066,”topicId”:6},
+{“term”:”aaa”,”probability”:0.06184882176158587,”topicId”:6},
+{“term”:”cct”,”probability”:0.060194426786324064,”topicId”:6},
+{“term”:”aac”,”probability”:0.05364240123558053,”topicId”:6},
+{“term”:”gta”,”probability”:0.05125828309982973,”topicId”:6},
+{“term”:”cat”,”probability”:0.048842531897893296,”topicId”:6},
+{“term”:”ata”,”probability”:0.048538928994278294,”topicId”:6},
+{“term”:”ctt”,”probability”:0.046355753246257694,”topicId”:6},
+{“term”:”att”,”probability”:0.0438895720348804,”topicId”:6},
+{“term”:”act”,”probability”:0.138920713555467,”topicId”:7},
+{“term”:”gaa”,”probability”:0.11623655855686699,”topicId”:7},
+{“term”:”gtt”,”probability”:0.11131954478072532,”topicId”:7},
+{“term”:”cct”,”probability”:0.09797657089663879,”topicId”:7},
+{“term”:”gca”,”probability”:0.09537701456561963,”topicId”:7},
+{“term”:”gct”,”probability”:0.07867848533081129,”topicId”:7},
+{“term”:”aat”,”probability”:0.07443106809609575,”topicId”:7},
+{“term”:”tct”,”probability”:0.07020863559136906,”topicId”:7},
+{“term”:”ggt”,”probability”:0.03446134517117473,”topicId”:7},
+{“term”:”cca”,”probability”:0.033385060241571896,”topicId”:7},
+{“term”:”ctg”,”probability”:0.28277883416145083,”topicId”:8},
+{“term”:”gtg”,”probability”:0.24258736038861525,”topicId”:8},
+{“term”:”cta”,”probability”:0.18511978802062573,”topicId”:8},
+{“term”:”ttg”,”probability”:0.16014802621366006,”topicId”:8},
+{“term”:”aag”,”probability”:0.05615522182851401,”topicId”:8},
+{“term”:”cag”,”probability”:0.03983192456693103,”topicId”:8},
+{“term”:”tta”,”probability”:0.020870881653583494,”topicId”:8},
+{“term”:”ctc”,”probability”:0.0062814812111272045,”topicId”:8},
+{“term”:”atg”,”probability”:0.00399671737635821,”topicId”:8},
+{“term”:”att”,”probability”:9.82373258811589E-4,”topicId”:8},
+{“term”:”ttc”,”probability”:0.11215026160406903,”topicId”:9},
+{“term”:”aga”,”probability”:0.09997045883724656,”topicId”:9},
+{“term”:”tgt”,”probability”:0.09899616804868992,”topicId”:9},
+{“term”:”acc”,”probability”:0.08542133373176733,”topicId”:9},
+{“term”:”agg”,”probability”:0.07086604003052271,”topicId”:9},
+{“term”:”taa”,”probability”:0.06834480309637822,”topicId”:9},
+{“term”:”tac”,”probability”:0.06739680588614552,”topicId”:9},
+{“term”:”agc”,”probability”:0.05697027903014449,”topicId”:9},
+{“term”:”aac”,”probability”:0.056905309123899905,”topicId”:9},
+{“term”:”tgg”,”probability”:0.05592287104822075,”topicId”:9},
+{“term”:”tat”,”probability”:0.3045069518222243,”topicId”:10},
+{“term”:”ttt”,”probability”:0.10598334819720531,”topicId”:10},
+{“term”:”gat”,”probability”:0.08497145047846107,”topicId”:10},
+{“term”:”gga”,”probability”:0.07195554779872801,”topicId”:10},
+{“term”:”gaa”,”probability”:0.06334411211783564,”topicId”:10},
+{“term”:”gac”,”probability”:0.0501259249002475,”topicId”:10},
+{“term”:”tct”,”probability”:0.04184334240304662,”topicId”:10},
+{“term”:”gtc”,”probability”:0.04081731047807028,”topicId”:10},
+{“term”:”tgt”,”probability”:0.03407004785264182,”topicId”:10},
+{“term”:”ggc”,”probability”:0.03084819860780612,”topicId”:10},
+{“term”:”aat”,”probability”:0.15313129377634324,”topicId”:11},
+{“term”:”gtt”,”probability”:0.11136486968533195,”topicId”:11},
+{“term”:”act”,”probability”:0.09938109260597303,”topicId”:11},
+{“term”:”ttt”,”probability”:0.08098107901971825,”topicId”:11},
+{“term”:”tct”,”probability”:0.07436579060226875,”topicId”:11},
+{“term”:”cca”,”probability”:0.05973226662906273,”topicId”:11},
+{“term”:”gtc”,”probability”:0.054342333209175524,”topicId”:11},
+{“term”:”gct”,”probability”:0.045969566448502135,”topicId”:11},
+{“term”:”gca”,”probability”:0.04230395769909175,”topicId”:11},
+{“term”:”caa”,”probability”:0.03379103377830444,”topicId”:11},
+{“term”:”atg”,”probability”:0.40393420174728084,”topicId”:12},
+{“term”:”aag”,”probability”:0.1596752741519448,”topicId”:12},
+{“term”:”ata”,”probability”:0.08818488731461775,”topicId”:12},
+{“term”:”cag”,”probability”:0.08716769751558717,”topicId”:12},
+{“term”:”ttg”,”probability”:0.06381755416913878,”topicId”:12},
+{“term”:”gtg”,”probability”:0.049195933694508975,”topicId”:12},
+{“term”:”gta”,”probability”:0.04824283384256685,”topicId”:12},
+{“term”:”cta”,”probability”:0.026223167199516388,”topicId”:12},
+{“term”:”att”,”probability”:0.024815702746123547,”topicId”:12},
+{“term”:”gag”,”probability”:0.02148135368458484,”topicId”:12},
+{“term”:”ttt”,”probability”:0.035599603090872865,”topicId”:13},
+{“term”:”aaa”,”probability”:0.03316334088308096,”topicId”:13},
+{“term”:”tta”,”probability”:0.029506633362044763,”topicId”:13},
+{“term”:”aca”,”probability”:0.028837067221916004,”topicId”:13},
+{“term”:”att”,”probability”:0.027851671336394827,”topicId”:13},
+{“term”:”aat”,”probability”:0.027841516352361567,”topicId”:13},
+{“term”:”ttg”,”probability”:0.0266395226520003,”topicId”:13},
+{“term”:”ctt”,”probability”:0.026460194631246266,”topicId”:13},
+{“term”:”gtt”,”probability”:0.025952308084089198,”topicId”:13},
+{“term”:”tgt”,”probability”:0.025801614473320057,”topicId”:13},
+{“term”:”tga”,”probability”:0.40588646983739857,”topicId”:14},
+{“term”:”taa”,”probability”:0.37622335900348414,”topicId”:14},
+{“term”:”tgc”,”probability”:0.10329844674204074,”topicId”:14},
+{“term”:”tgg”,”probability”:0.06408543556719108,”topicId”:14},
+{“term”:”agc”,”probability”:0.04398157038264574,”topicId”:14},
+{“term”:”tgt”,”probability”:0.0019443504371832467,”topicId”:14},
+{“term”:”agg”,”probability”:0.0010816324847375551,”topicId”:14},
+{“term”:”aga”,”probability”:9.690985396810429E-4,”topicId”:14},
+{“term”:”acg”,”probability”:6.089366179352809E-4,”topicId”:14},
+{“term”:”cac”,”probability”:5.306961262864047E-4,”topicId”:14},
+{“term”:”tgc”,”probability”:0.24867912307479623,”topicId”:15},
+{“term”:”tgg”,”probability”:0.22221039810278131,”topicId”:15},
+{“term”:”aga”,”probability”:0.20406796030722257,”topicId”:15},
+{“term”:”tgt”,”probability”:0.12898820492414326,”topicId”:15},
+{“term”:”agc”,”probability”:0.09584946822473574,”topicId”:15},
+{“term”:”ttc”,”probability”:0.02554181811977189,”topicId”:15},
+{“term”:”taa”,”probability”:0.023060962961734793,”topicId”:15},
+{“term”:”cgg”,”probability”:0.020407562155919816,”topicId”:15},
+{“term”:”ccg”,”probability”:0.011656627402572343,”topicId”:15},
+{“term”:”cgc”,”probability”:0.006080144266796195,”topicId”:15},
+{“term”:”ttt”,”probability”:0.09608019178573185,”topicId”:16},
+{“term”:”cat”,”probability”:0.09468093931917036,”topicId”:16},
+{“term”:”tac”,”probability”:0.08831517668933483,”topicId”:16},
+{“term”:”cac”,”probability”:0.07888279734384865,”topicId”:16},
+{“term”:”agt”,”probability”:0.07869379372671728,”topicId”:16},
+{“term”:”tgt”,”probability”:0.0771074369407922,”topicId”:16},
+{“term”:”ttc”,”probability”:0.0663989870422319,”topicId”:16},
+{“term”:”tcc”,”probability”:0.06297689584243867,”topicId”:16},
+{“term”:”aac”,”probability”:0.05267634917479531,”topicId”:16},
+{“term”:”agg”,”probability”:0.04892840448322181,”topicId”:16},
+{“term”:”ggt”,”probability”:0.22228300511643612,”topicId”:17},
+{“term”:”gct”,”probability”:0.17755862786216,”topicId”:17},
+{“term”:”gat”,”probability”:0.17554547535640996,”topicId”:17},
+{“term”:”gaa”,”probability”:0.11845531895301108,”topicId”:17},
+{“term”:”gtt”,”probability”:0.09025470457109182,”topicId”:17},
+{“term”:”aat”,”probability”:0.05251852326151254,”topicId”:17},
+{“term”:”act”,”probability”:0.04535072041908663,”topicId”:17},
+{“term”:”gac”,”probability”:0.04157274838229573,”topicId”:17},
+{“term”:”ggc”,”probability”:0.031801606359594274,”topicId”:17},
+{“term”:”tct”,”probability”:0.01448129735009463,”topicId”:17},
+{“term”:”tgt”,”probability”:0.21848944559310404,”topicId”:18},
+{“term”:”acc”,”probability”:0.08454143009325459,”topicId”:18},
+{“term”:”ttt”,”probability”:0.07189677948995123,”topicId”:18},
+{“term”:”tac”,”probability”:0.07173317060439306,”topicId”:18},
+{“term”:”aga”,”probability”:0.07085445959317387,”topicId”:18},
+{“term”:”agt”,”probability”:0.07034306881074903,”topicId”:18},
+{“term”:”ttc”,”probability”:0.06751676005545235,”topicId”:18},
+{“term”:”aac”,”probability”:0.04214370938600386,”topicId”:18},
+{“term”:”cat”,”probability”:0.039481737827846496,”topicId”:18},
+{“term”:”atc”,”probability”:0.03802927898631681,”topicId”:18},
+{“term”:”aaa”,”probability”:0.24419795743787553,”topicId”:19},
+{“term”:”aca”,”probability”:0.08971504465736907,”topicId”:19},
+{“term”:”aat”,”probability”:0.0696418602760822,”topicId”:19},
+{“term”:”tca”,”probability”:0.06173297410313595,”topicId”:19},
+{“term”:”cca”,”probability”:0.045853026172169624,”topicId”:19},
+{“term”:”gtt”,”probability”:0.044662470242603544,”topicId”:19},
+{“term”:”ctt”,”probability”:0.04423826724372272,”topicId”:19},
+{“term”:”tct”,”probability”:0.042421366904275344,”topicId”:19},
+{“term”:”ttt”,”probability”:0.04228231192822315,”topicId”:19},
+{“term”:”caa”,”probability”:0.03977456484384988,”topicId”:19}
+]
+}
+]
+};</p>
+<p>var r = 1000,
+format = d3.format(“,d”),
+fill = d3.scale.category20c();</p>
+<p>var bubble = d3.layout.pack()
+.sort(null)
+.size([r, r])
+.padding(1.5);</p>
+<p>var vis = d3.select(“body”).append(“svg”)
+.attr(“width”, r)
+.attr(“height”, r)
+.attr(“class”, “bubble”);</p>
+<p>var node = vis.selectAll(“g.node”)
+.data(bubble.nodes(classes(json))
+.filter(function(d) { return !d.children; }))
+.enter().append(“g”)
+.attr(“class”, “node”)
+.attr(“transform”, function(d) { return “translate(” + d.x + “,” + d.y + “)”; })
+color = d3.scale.category20();</p>
+<p>node.append(“title”)
+.text(function(d) { return d.className + “: ” + format(d.value); });</p>
+<p>node.append(“circle”)
+.attr(“r”, function(d) { return d.r; })
+.style(“fill”, function(d) {return color(d.topicName);});</p>
+<p>var text = node.append(“text”)
+.attr(“text-anchor”, “middle”)
+.attr(“dy”, “.3em”)
+.text(function(d) { return d.className.substring(0, d.r / 3)});</p>
+<p>text.append(“tspan”)
+.attr(“dy”, “1.2em”)
+.attr(“x”, 0)
+.text(function(d) {return Math.ceil(d.value * 10000) /10000; });</p>
+<p>// Returns a flattened hierarchy containing all leaf nodes under the root.
+function classes(root) {
+var classes = [];</p>
+<p>function recurse(term, node) {
+if (node.children) node.children.forEach(function(child) { recurse(node.term, child); });
+else classes.push({topicName: node.topicId, className: node.term, value: node.probability});
+}</p>
+<p>recurse(null, root);
+return {children: classes};
+}
+</script></p>
 </div>
 
     <script type="text/x-thebe-config">
