--- a/000_0-sds-3-x-projects/student-project-09_group-TopicModeling/06_Results.html
+++ b/000_0-sds-3-x-projects/student-project-09_group-TopicModeling/06_Results.html
@@ -1510,10 +1510,7 @@ scalable (by reducing the number of features to the number of topics
 chosen).</p></li>
 </ul>
 <p>“Everything should be made as simple as possible, but no simpler.”</p>
-<p>&lt;img
-src=”/files/shared<em>uploads/caylak&#64;kth.se/1200px</em>Albert<em>Einstein</em>Head.jpg”
-alt=”drawing” width=”200”/&gt;</p>
-</div>
+<img src="/files/shared_uploads/caylak@kth.se/1200px_Albert_Einstein_Head.jpg" alt="drawing" width="200"/></div>
 </div>
 
     <script type="text/x-thebe-config">
