--- a/000_0-sds-3-x-projects/student-project-12_group-CovidPandemic/01_DownloadFilesPeriodicallyScript.html
+++ b/000_0-sds-3-x-projects/student-project-12_group-CovidPandemic/01_DownloadFilesPeriodicallyScript.html
@@ -1701,8 +1701,42 @@ the datasets</p>
 </div>
 </div>
 </div>
-<p>[TABLE]</p>
-</div>
+<table>
+<thead>
+<tr class="header">
+<th>path</th>
+<th>name</th>
+<th>size</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>dbfs:/datasets/group12/20_12_04_08_31_44.csv</td>
+<td>20_12_04_08_31_44.csv</td>
+<td>1.4181338e7</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/20_12_04_08_32_40.csv</td>
+<td>20_12_04_08_32_40.csv</td>
+<td>1.4181338e7</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/20_12_04_10_47_08.csv</td>
+<td>20_12_04_10_47_08.csv</td>
+<td>1.4190774e7</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/21_01_07_08_50_05.csv</td>
+<td>21_01_07_08_50_05.csv</td>
+<td>1.4577033e7</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/21_01_07_09_05_33.csv</td>
+<td>21_01_07_09_05_33.csv</td>
+<td>1.4577033e7</td>
+</tr>
+</tbody>
+</table></div>
 
     <script type="text/x-thebe-config">
     {
