--- a/000_0-sds-3-x-projects/student-project-12_group-CovidPandemic/01_StreamToFile.html
+++ b/000_0-sds-3-x-projects/student-project-12_group-CovidPandemic/01_StreamToFile.html
@@ -1318,7 +1318,52 @@ Sainudiin.</p>
 </div>
 </div>
 </div>
-<p>[TABLE]</p>
+<table>
+<thead>
+<tr class="header">
+<th>path</th>
+<th>name</th>
+<th>size</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>dbfs:/datasets/group12/20_12_04_08_31_44.csv</td>
+<td>20_12_04_08_31_44.csv</td>
+<td>1.4181338e7</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/20_12_04_08_32_40.csv</td>
+<td>20_12_04_08_32_40.csv</td>
+<td>1.4181338e7</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/20_12_04_10_47_08.csv</td>
+<td>20_12_04_10_47_08.csv</td>
+<td>1.4190774e7</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/21_01_07_08_50_05.csv</td>
+<td>21_01_07_08_50_05.csv</td>
+<td>1.4577033e7</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/21_01_07_09_05_33.csv</td>
+<td>21_01_07_09_05_33.csv</td>
+<td>1.4577033e7</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/analysis/</td>
+<td>analysis/</td>
+<td>0.0</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/chkpoint/</td>
+<td>chkpoint/</td>
+<td>0.0</td>
+</tr>
+</tbody>
+</table>
 <p>check the schema for the csv files.</p>
 <div class="cell docutils container">
 <div class="cell_input docutils container">
@@ -1668,7 +1713,167 @@ query.awaitTermination() // hit cancel to terminate
 </div>
 </div>
 </div>
-<p>[TABLE]</p>
+<table>
+<thead>
+<tr class="header">
+<th>path</th>
+<th>name</th>
+<th>size</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>dbfs:/datasets/group12/analysis/_spark_metadata/</td>
+<td>_spark_metadata/</td>
+<td>0.0</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/analysis/part-00000-54b276ea-c780-4057-9851-16e4130d9e12-c000.snappy.parquet</td>
+<td>part-00000-54b276ea-c780-4057-9851-16e4130d9e12-c000.snappy.parquet</td>
+<td>17201.0</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/analysis/part-00000-cf4c4cb5-1bb7-4dbc-acb9-76a5265fc04f-c000.snappy.parquet</td>
+<td>part-00000-cf4c4cb5-1bb7-4dbc-acb9-76a5265fc04f-c000.snappy.parquet</td>
+<td>58188.0</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/analysis/part-00000-ff70d762-b54f-4b1a-9de0-4e239b7764fc-c000.snappy.parquet</td>
+<td>part-00000-ff70d762-b54f-4b1a-9de0-4e239b7764fc-c000.snappy.parquet</td>
+<td>5397.0</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/analysis/part-00001-496b7ed1-ea5c-45d4-a6b2-4a7571993634-c000.snappy.parquet</td>
+<td>part-00001-496b7ed1-ea5c-45d4-a6b2-4a7571993634-c000.snappy.parquet</td>
+<td>17906.0</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/analysis/part-00001-fb2989d2-842a-4a53-8cf2-268e71d7ac9b-c000.snappy.parquet</td>
+<td>part-00001-fb2989d2-842a-4a53-8cf2-268e71d7ac9b-c000.snappy.parquet</td>
+<td>56057.0</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/analysis/part-00002-79215a69-a5bb-4da7-aac9-f71bcd7a4eb6-c000.snappy.parquet</td>
+<td>part-00002-79215a69-a5bb-4da7-aac9-f71bcd7a4eb6-c000.snappy.parquet</td>
+<td>59787.0</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/analysis/part-00002-7a424c8c-29d3-49f0-97aa-f5bda05d4baf-c000.snappy.parquet</td>
+<td>part-00002-7a424c8c-29d3-49f0-97aa-f5bda05d4baf-c000.snappy.parquet</td>
+<td>16585.0</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/analysis/part-00003-13c2bb55-efa6-4692-b4bf-ba8bccdf0850-c000.snappy.parquet</td>
+<td>part-00003-13c2bb55-efa6-4692-b4bf-ba8bccdf0850-c000.snappy.parquet</td>
+<td>58483.0</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/analysis/part-00003-9c6bb086-0876-4f0b-bb0b-921b07db0245-c000.snappy.parquet</td>
+<td>part-00003-9c6bb086-0876-4f0b-bb0b-921b07db0245-c000.snappy.parquet</td>
+<td>16218.0</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/analysis/part-00004-a13d486a-de84-48ee-99d0-5931859ea788-c000.snappy.parquet</td>
+<td>part-00004-a13d486a-de84-48ee-99d0-5931859ea788-c000.snappy.parquet</td>
+<td>18343.0</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/analysis/part-00004-b28c8342-1b4c-42ce-aa75-221ef9122e1f-c000.snappy.parquet</td>
+<td>part-00004-b28c8342-1b4c-42ce-aa75-221ef9122e1f-c000.snappy.parquet</td>
+<td>60215.0</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/analysis/part-00005-1a063ecd-eaf6-40ca-9939-2f214d642ebf-c000.snappy.parquet</td>
+<td>part-00005-1a063ecd-eaf6-40ca-9939-2f214d642ebf-c000.snappy.parquet</td>
+<td>55767.0</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/analysis/part-00005-710b86e5-4c15-4c95-87b7-78dfc554164e-c000.snappy.parquet</td>
+<td>part-00005-710b86e5-4c15-4c95-87b7-78dfc554164e-c000.snappy.parquet</td>
+<td>16679.0</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/analysis/part-00006-1277a194-323f-4b58-8082-af458ae9a404-c000.snappy.parquet</td>
+<td>part-00006-1277a194-323f-4b58-8082-af458ae9a404-c000.snappy.parquet</td>
+<td>17565.0</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/analysis/part-00006-6515a7dd-be37-4c2e-a819-352acdd079e1-c000.snappy.parquet</td>
+<td>part-00006-6515a7dd-be37-4c2e-a819-352acdd079e1-c000.snappy.parquet</td>
+<td>58608.0</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/analysis/part-00007-20ef8700-52d9-443b-919f-e551c681092e-c000.snappy.parquet</td>
+<td>part-00007-20ef8700-52d9-443b-919f-e551c681092e-c000.snappy.parquet</td>
+<td>17837.0</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/analysis/part-00007-beae3a20-b97b-451d-bd85-771f13ba4232-c000.snappy.parquet</td>
+<td>part-00007-beae3a20-b97b-451d-bd85-771f13ba4232-c000.snappy.parquet</td>
+<td>56550.0</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/analysis/part-00008-4267b6c4-66e1-4ac0-95d1-f845f832dff5-c000.snappy.parquet</td>
+<td>part-00008-4267b6c4-66e1-4ac0-95d1-f845f832dff5-c000.snappy.parquet</td>
+<td>18535.0</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/analysis/part-00008-9a6dbe09-ffb1-493d-a43f-224b1709e1c4-c000.snappy.parquet</td>
+<td>part-00008-9a6dbe09-ffb1-493d-a43f-224b1709e1c4-c000.snappy.parquet</td>
+<td>52991.0</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/analysis/part-00009-60e0aab9-ce26-4475-8fdf-49307601688a-c000.snappy.parquet</td>
+<td>part-00009-60e0aab9-ce26-4475-8fdf-49307601688a-c000.snappy.parquet</td>
+<td>17035.0</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/analysis/part-00009-8cd0dd39-9949-4b60-8733-62e744b389da-c000.snappy.parquet</td>
+<td>part-00009-8cd0dd39-9949-4b60-8733-62e744b389da-c000.snappy.parquet</td>
+<td>56636.0</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/analysis/part-00010-508e4552-75d7-4df8-b8c6-91962fe9d685-c000.snappy.parquet</td>
+<td>part-00010-508e4552-75d7-4df8-b8c6-91962fe9d685-c000.snappy.parquet</td>
+<td>56713.0</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/analysis/part-00010-8e3dffee-718c-453a-9340-17aa636f2dc0-c000.snappy.parquet</td>
+<td>part-00010-8e3dffee-718c-453a-9340-17aa636f2dc0-c000.snappy.parquet</td>
+<td>16320.0</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/analysis/part-00011-0c8846bd-4ba1-4181-ae67-dd13b8aeed52-c000.snappy.parquet</td>
+<td>part-00011-0c8846bd-4ba1-4181-ae67-dd13b8aeed52-c000.snappy.parquet</td>
+<td>16659.0</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/analysis/part-00011-479c45d7-b910-4b03-98f1-bfd3ee6d3d63-c000.snappy.parquet</td>
+<td>part-00011-479c45d7-b910-4b03-98f1-bfd3ee6d3d63-c000.snappy.parquet</td>
+<td>58137.0</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/analysis/part-00012-72ea6242-8bbc-493b-b447-42a531065b91-c000.snappy.parquet</td>
+<td>part-00012-72ea6242-8bbc-493b-b447-42a531065b91-c000.snappy.parquet</td>
+<td>58598.0</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/analysis/part-00012-a6e467ee-c08e-42de-83e2-a8f7ac16b200-c000.snappy.parquet</td>
+<td>part-00012-a6e467ee-c08e-42de-83e2-a8f7ac16b200-c000.snappy.parquet</td>
+<td>18308.0</td>
+</tr>
+<tr class="odd">
+<td>dbfs:/datasets/group12/analysis/part-00013-08f02057-b29e-4bf6-abd4-19d8ee14076c-c000.snappy.parquet</td>
+<td>part-00013-08f02057-b29e-4bf6-abd4-19d8ee14076c-c000.snappy.parquet</td>
+<td>17275.0</td>
+</tr>
+<tr class="even">
+<td>dbfs:/datasets/group12/analysis/part-00013-2fbf93f7-31a6-41cf-9fe0-ca7c68c9f78a-c000.snappy.parquet</td>
+<td>part-00013-2fbf93f7-31a6-41cf-9fe0-ca7c68c9f78a-c000.snappy.parquet</td>
+<td>58875.0</td>
+</tr>
+</tbody>
+</table>
 <p>Truncated to 30 rows</p>
 <div class="cell docutils container">
 <div class="cell_input docutils container">
@@ -1689,7 +1894,96 @@ query.awaitTermination() // hit cancel to terminate
 </div>
 </div>
 </div>
-<p>[TABLE]</p>
+<table>
+<thead>
+<tr class="header">
+<th>summary</th>
+<th>iso_code</th>
+<th>continent</th>
+<th>location</th>
+<th>date</th>
+<th>total_cases</th>
+<th>new_cases</th>
+<th>new_cases_smoothed</th>
+<th>total_deaths</th>
+<th>new_deaths</th>
+<th>new_deaths_smoothed</th>
+<th>total_cases_per_million</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>count</td>
+<td>62184</td>
+<td>61867</td>
+<td>62500</td>
+<td>62500</td>
+<td>53761</td>
+<td>62377</td>
+<td>61421</td>
+<td>45901</td>
+<td>62377</td>
+<td>61421</td>
+<td>53460</td>
+</tr>
+<tr class="even">
+<td>mean</td>
+<td>null</td>
+<td>null</td>
+<td>null</td>
+<td>null</td>
+<td>235416.1718904038</td>
+<td>2397.8407425814003</td>
+<td>2367.056380553872</td>
+<td>8908.311256835363</td>
+<td>55.19233050643667</td>
+<td>54.80704391006325</td>
+<td>3798.2407507482267</td>
+</tr>
+<tr class="odd">
+<td>stddev</td>
+<td>null</td>
+<td>null</td>
+<td>null</td>
+<td>null</td>
+<td>2063317.939351184</td>
+<td>20722.406766273503</td>
+<td>20188.721091973344</td>
+<td>62835.10460453239</td>
+<td>420.0315418848828</td>
+<td>404.7550597418351</td>
+<td>7537.842859063191</td>
+</tr>
+<tr class="even">
+<td>min</td>
+<td>AFG</td>
+<td>Africa</td>
+<td>Afghanistan</td>
+<td>2020-01-01</td>
+<td>1.0</td>
+<td>-10034.0</td>
+<td>-525.0</td>
+<td>1.0</td>
+<td>-1918.0</td>
+<td>-232.143</td>
+<td>0.001</td>
+</tr>
+<tr class="odd">
+<td>max</td>
+<td>ZWE</td>
+<td>South America</td>
+<td>Zimbabwe</td>
+<td>2020-12-03</td>
+<td>6.5220557E7</td>
+<td>690127.0</td>
+<td>600775.429</td>
+<td>1506251.0</td>
+<td>12825.0</td>
+<td>10538.571</td>
+<td>89354.818</td>
+</tr>
+</tbody>
+</table>
 <p>Truncated to 12 cols</p>
 <div class="cell docutils container">
 <div class="cell_input docutils container">
@@ -1698,7 +1992,446 @@ query.awaitTermination() // hit cancel to terminate
 </div>
 </div>
 </div>
-<p>[TABLE]</p>
+<table>
+<thead>
+<tr class="header">
+<th>iso_code</th>
+<th>continent</th>
+<th>location</th>
+<th>date</th>
+<th>total_cases</th>
+<th>new_cases</th>
+<th>new_cases_smoothed</th>
+<th>total_deaths</th>
+<th>new_deaths</th>
+<th>new_deaths_smoothed</th>
+<th>total_cases_per_million</th>
+<th>new_cases_per_million</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>VNM</td>
+<td>Asia</td>
+<td>Vietnam</td>
+<td>2021-01-06</td>
+<td>1505.0</td>
+<td>1.0</td>
+<td>7.0</td>
+<td>35.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>15.461</td>
+<td>1.0e-2</td>
+</tr>
+<tr class="even">
+<td>PRT</td>
+<td>Europe</td>
+<td>Portugal</td>
+<td>2021-01-06</td>
+<td>446606.0</td>
+<td>10027.0</td>
+<td>5793.571</td>
+<td>7377.0</td>
+<td>91.0</td>
+<td>78.143</td>
+<td>43799.042</td>
+<td>983.357</td>
+</tr>
+<tr class="odd">
+<td>JAM</td>
+<td>North America</td>
+<td>Jamaica</td>
+<td>2021-01-06</td>
+<td>13330.0</td>
+<td>84.0</td>
+<td>76.714</td>
+<td>306.0</td>
+<td>1.0</td>
+<td>0.571</td>
+<td>4501.613</td>
+<td>28.367</td>
+</tr>
+<tr class="even">
+<td>NIC</td>
+<td>North America</td>
+<td>Nicaragua</td>
+<td>2021-01-06</td>
+<td>6097.0</td>
+<td>0.0</td>
+<td>7.286</td>
+<td>166.0</td>
+<td>0.0</td>
+<td>0.143</td>
+<td>920.364</td>
+<td>0.0</td>
+</tr>
+<tr class="odd">
+<td>CHE</td>
+<td>Europe</td>
+<td>Switzerland</td>
+<td>2021-01-06</td>
+<td>470789.0</td>
+<td>4808.0</td>
+<td>3269.143</td>
+<td>8109.0</td>
+<td>91.0</td>
+<td>73.571</td>
+<td>54397.433</td>
+<td>555.542</td>
+</tr>
+<tr class="even">
+<td>FRA</td>
+<td>Europe</td>
+<td>France</td>
+<td>2021-01-06</td>
+<td>2763116.0</td>
+<td>25232.0</td>
+<td>15070.286</td>
+<td>66699.0</td>
+<td>282.0</td>
+<td>313.0</td>
+<td>42331.352</td>
+<td>386.558</td>
+</tr>
+<tr class="odd">
+<td>HTI</td>
+<td>North America</td>
+<td>Haiti</td>
+<td>2021-01-06</td>
+<td>10127.0</td>
+<td>0.0</td>
+<td>18.286</td>
+<td>236.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>888.136</td>
+<td>0.0</td>
+</tr>
+<tr class="even">
+<td>MCO</td>
+<td>Europe</td>
+<td>Monaco</td>
+<td>2021-01-06</td>
+<td>978.0</td>
+<td>31.0</td>
+<td>17.857</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>24921.007</td>
+<td>789.93</td>
+</tr>
+<tr class="odd">
+<td>PAN</td>
+<td>North America</td>
+<td>Panama</td>
+<td>2021-01-06</td>
+<td>264956.0</td>
+<td>5186.0</td>
+<td>3173.143</td>
+<td>4283.0</td>
+<td>45.0</td>
+<td>44.0</td>
+<td>61406.778</td>
+<td>1201.919</td>
+</tr>
+<tr class="even">
+<td>MWI</td>
+<td>Africa</td>
+<td>Malawi</td>
+<td>2021-01-06</td>
+<td>7337.0</td>
+<td>227.0</td>
+<td>123.714</td>
+<td>199.0</td>
+<td>0.0</td>
+<td>1.429</td>
+<td>383.535</td>
+<td>11.866</td>
+</tr>
+<tr class="odd">
+<td>AND</td>
+<td>Europe</td>
+<td>Andorra</td>
+<td>2021-01-06</td>
+<td>8348.0</td>
+<td>40.0</td>
+<td>52.143</td>
+<td>84.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>108043.746</td>
+<td>517.699</td>
+</tr>
+<tr class="even">
+<td>SMR</td>
+<td>Europe</td>
+<td>San Marino</td>
+<td>2021-01-06</td>
+<td>2549.0</td>
+<td>0.0</td>
+<td>23.571</td>
+<td>62.0</td>
+<td>0.0</td>
+<td>0.429</td>
+<td>75107.549</td>
+<td>0.0</td>
+</tr>
+<tr class="odd">
+<td>SYR</td>
+<td>Asia</td>
+<td>Syria</td>
+<td>2021-01-06</td>
+<td>11988.0</td>
+<td>98.0</td>
+<td>92.0</td>
+<td>747.0</td>
+<td>6.0</td>
+<td>6.143</td>
+<td>685.003</td>
+<td>5.6</td>
+</tr>
+<tr class="even">
+<td>GEO</td>
+<td>Asia</td>
+<td>Georgia</td>
+<td>2021-01-06</td>
+<td>233879.0</td>
+<td>1800.0</td>
+<td>1140.857</td>
+<td>2666.0</td>
+<td>20.0</td>
+<td>26.429</td>
+<td>58628.413</td>
+<td>451.221</td>
+</tr>
+<tr class="odd">
+<td>BLZ</td>
+<td>North America</td>
+<td>Belize</td>
+<td>2021-01-06</td>
+<td>11108.0</td>
+<td>90.0</td>
+<td>54.857</td>
+<td>260.0</td>
+<td>2.0</td>
+<td>2.571</td>
+<td>27936.15</td>
+<td>226.346</td>
+</tr>
+<tr class="even">
+<td>ETH</td>
+<td>Africa</td>
+<td>Ethiopia</td>
+<td>2021-01-06</td>
+<td>126786.0</td>
+<td>545.0</td>
+<td>418.571</td>
+<td>1965.0</td>
+<td>2.0</td>
+<td>6.714</td>
+<td>1102.836</td>
+<td>4.741</td>
+</tr>
+<tr class="odd">
+<td>MDG</td>
+<td>Africa</td>
+<td>Madagascar</td>
+<td>2021-01-06</td>
+<td>17767.0</td>
+<td>0.0</td>
+<td>7.571</td>
+<td>262.0</td>
+<td>0.0</td>
+<td>0.143</td>
+<td>641.616</td>
+<td>0.0</td>
+</tr>
+<tr class="even">
+<td>ISR</td>
+<td>Asia</td>
+<td>Israel</td>
+<td>2021-01-06</td>
+<td>463448.0</td>
+<td>7309.0</td>
+<td>6694.857</td>
+<td>3529.0</td>
+<td>33.0</td>
+<td>31.714</td>
+<td>53543.505</td>
+<td>844.43</td>
+</tr>
+<tr class="odd">
+<td>BHS</td>
+<td>North America</td>
+<td>Bahamas</td>
+<td>2021-01-06</td>
+<td>7945.0</td>
+<td>17.0</td>
+<td>12.571</td>
+<td>175.0</td>
+<td>0.0</td>
+<td>0.714</td>
+<td>20203.536</td>
+<td>43.23</td>
+</tr>
+<tr class="even">
+<td>BEN</td>
+<td>Africa</td>
+<td>Benin</td>
+<td>2021-01-06</td>
+<td>3304.0</td>
+<td>0.0</td>
+<td>7.571</td>
+<td>44.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>272.535</td>
+<td>0.0</td>
+</tr>
+<tr class="odd">
+<td>DOM</td>
+<td>North America</td>
+<td>Dominican Republic</td>
+<td>2021-01-06</td>
+<td>176378.0</td>
+<td>529.0</td>
+<td>971.286</td>
+<td>2419.0</td>
+<td>0.0</td>
+<td>1.429</td>
+<td>16259.178</td>
+<td>48.765</td>
+</tr>
+<tr class="even">
+<td>KGZ</td>
+<td>Asia</td>
+<td>Kyrgyzstan</td>
+<td>2021-01-06</td>
+<td>81656.0</td>
+<td>144.0</td>
+<td>116.143</td>
+<td>1361.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>12515.881</td>
+<td>22.072</td>
+</tr>
+<tr class="odd">
+<td>LTU</td>
+<td>Europe</td>
+<td>Lithuania</td>
+<td>2021-01-06</td>
+<td>152215.0</td>
+<td>2718.0</td>
+<td>1999.429</td>
+<td>2036.0</td>
+<td>40.0</td>
+<td>87.714</td>
+<td>55914.302</td>
+<td>998.424</td>
+</tr>
+<tr class="even">
+<td>BGR</td>
+<td>Europe</td>
+<td>Bulgaria</td>
+<td>2021-01-06</td>
+<td>206392.0</td>
+<td>1002.0</td>
+<td>738.857</td>
+<td>7961.0</td>
+<td>59.0</td>
+<td>63.714</td>
+<td>29703.337</td>
+<td>144.205</td>
+</tr>
+<tr class="odd">
+<td>SLE</td>
+<td>Africa</td>
+<td>Sierra Leone</td>
+<td>2021-01-06</td>
+<td>2739.0</td>
+<td>15.0</td>
+<td>22.286</td>
+<td>76.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>343.363</td>
+<td>1.88</td>
+</tr>
+<tr class="even">
+<td>SUR</td>
+<td>South America</td>
+<td>Suriname</td>
+<td>2021-01-06</td>
+<td>6666.0</td>
+<td>80.0</td>
+<td>69.286</td>
+<td>126.0</td>
+<td>1.0</td>
+<td>0.714</td>
+<td>11363.133</td>
+<td>136.371</td>
+</tr>
+<tr class="odd">
+<td>AZE</td>
+<td>Asia</td>
+<td>Azerbaijan</td>
+<td>2021-01-06</td>
+<td>222200.0</td>
+<td>799.0</td>
+<td>652.0</td>
+<td>2818.0</td>
+<td>26.0</td>
+<td>29.857</td>
+<td>21914.998</td>
+<td>78.803</td>
+</tr>
+<tr class="even">
+<td>LSO</td>
+<td>Africa</td>
+<td>Lesotho</td>
+<td>2021-01-06</td>
+<td>4137.0</td>
+<td>931.0</td>
+<td>149.0</td>
+<td>73.0</td>
+<td>8.0</td>
+<td>3.143</td>
+<td>1931.145</td>
+<td>434.589</td>
+</tr>
+<tr class="odd">
+<td>TTO</td>
+<td>North America</td>
+<td>Trinidad and Tobago</td>
+<td>2021-01-06</td>
+<td>7196.0</td>
+<td>10.0</td>
+<td>9.143</td>
+<td>127.0</td>
+<td>0.0</td>
+<td>0.143</td>
+<td>5141.869</td>
+<td>7.145</td>
+</tr>
+<tr class="even">
+<td>CAN</td>
+<td>North America</td>
+<td>Canada</td>
+<td>2021-01-06</td>
+<td>631466.0</td>
+<td>8082.0</td>
+<td>7742.857</td>
+<td>16403.0</td>
+<td>150.0</td>
+<td>129.286</td>
+<td>16731.052</td>
+<td>214.137</td>
+</tr>
+</tbody>
+</table>
 <p>Truncated to 30 rows</p>
 <p>Truncated to 12 cols</p>
 <div class="cell docutils container">
@@ -1778,7 +2511,96 @@ query.awaitTermination() // hit cancel to terminate
 </div>
 </div>
 </div>
-<p>[TABLE]</p>
+<table>
+<thead>
+<tr class="header">
+<th>summary</th>
+<th>iso_code</th>
+<th>continent</th>
+<th>location</th>
+<th>date</th>
+<th>total_cases</th>
+<th>new_cases</th>
+<th>new_cases_smoothed</th>
+<th>total_deaths</th>
+<th>new_deaths</th>
+<th>new_deaths_smoothed</th>
+<th>total_cases_per_million</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>count</td>
+<td>58196</td>
+<td>57845</td>
+<td>58531</td>
+<td>58531</td>
+<td>58008</td>
+<td>58001</td>
+<td>57046</td>
+<td>49657</td>
+<td>49656</td>
+<td>57046</td>
+<td>57673</td>
+</tr>
+<tr class="even">
+<td>mean</td>
+<td>null</td>
+<td>null</td>
+<td>null</td>
+<td>null</td>
+<td>280856.96293614677</td>
+<td>2977.974862502371</td>
+<td>2957.9528833748072</td>
+<td>9440.825059910989</td>
+<td>75.87175769292735</td>
+<td>64.76055386880755</td>
+<td>4803.329924592101</td>
+</tr>
+<tr class="odd">
+<td>stddev</td>
+<td>null</td>
+<td>null</td>
+<td>null</td>
+<td>null</td>
+<td>2748559.5139726754</td>
+<td>26447.176041635634</td>
+<td>25947.18346899017</td>
+<td>74852.02463395565</td>
+<td>554.179232738698</td>
+<td>496.3241880037069</td>
+<td>9770.196467368594</td>
+</tr>
+<tr class="even">
+<td>min</td>
+<td>AFG</td>
+<td>Africa</td>
+<td>Afghanistan</td>
+<td>2020-01-01</td>
+<td>1.0</td>
+<td>-46076.0</td>
+<td>-1121.714</td>
+<td>1.0</td>
+<td>-1918.0</td>
+<td>-232.143</td>
+<td>0.001</td>
+</tr>
+<tr class="odd">
+<td>max</td>
+<td>ZWE</td>
+<td>South America</td>
+<td>Zimbabwe</td>
+<td>2021-01-06</td>
+<td>8.718654E7</td>
+<td>780613.0</td>
+<td>646630.286</td>
+<td>1883761.0</td>
+<td>15525.0</td>
+<td>11670.429</td>
+<td>108043.746</td>
+</tr>
+</tbody>
+</table>
 <p>Truncated to 12 cols</p>
 </div>
 </div>
