--- a/000_0-sds-3-x-projects/student-project-15_group-FinancialDataStreams/02_rl_intraday_trading_elephas.html
+++ b/000_0-sds-3-x-projects/student-project-15_group-FinancialDataStreams/02_rl_intraday_trading_elephas.html
@@ -1614,8 +1614,7 @@ worker nodes. Elephas uses RDD’s internally to make the data dynamically
 available to the workers when required. After gradient computating and
 the update of the weights, the updated model parameters are pushed to
 the master model.</p>
-<p>&lt;img
-src=https://raw.githubusercontent.com/danielenricocahall/elephas/master/elephas.gif&gt;</p>
+<img src=https://raw.githubusercontent.com/danielenricocahall/elephas/master/elephas.gif>
 <p>For updating the parameters of the master_model, Elephas provides three
 modes, Synchronous, Asynchronous and HOGWILD
 (https://arxiv.org/abs/1106.5730).</p>
