--- a/000_0-sds-3-x-projects/student-project-16_group-IntrusionDetection/00_Introduction.html
+++ b/000_0-sds-3-x-projects/student-project-16_group-IntrusionDetection/00_Introduction.html
@@ -1568,7 +1568,446 @@ to predict the attack record label.</p>
 </div>
 </div>
 </div>
-<p>[TABLE]</p>
+<table>
+<thead>
+<tr class="header">
+<th>_c0</th>
+<th>_c1</th>
+<th>_c2</th>
+<th>_c3</th>
+<th>_c4</th>
+<th>_c5</th>
+<th>_c6</th>
+<th>_c7</th>
+<th>_c8</th>
+<th>_c9</th>
+<th>_c10</th>
+<th>_c11</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>59.166.0.0</td>
+<td>1390</td>
+<td>149.171.126.6</td>
+<td>53</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001055</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="even">
+<td>59.166.0.0</td>
+<td>33661</td>
+<td>149.171.126.9</td>
+<td>1024</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.036133</td>
+<td>528</td>
+<td>304</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="odd">
+<td>59.166.0.6</td>
+<td>1464</td>
+<td>149.171.126.7</td>
+<td>53</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001119</td>
+<td>146</td>
+<td>178</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="even">
+<td>59.166.0.5</td>
+<td>3593</td>
+<td>149.171.126.5</td>
+<td>53</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001209</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="odd">
+<td>59.166.0.3</td>
+<td>49664</td>
+<td>149.171.126.0</td>
+<td>53</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001169</td>
+<td>146</td>
+<td>178</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="even">
+<td>59.166.0.0</td>
+<td>32119</td>
+<td>149.171.126.9</td>
+<td>111</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.078339</td>
+<td>568</td>
+<td>312</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="odd">
+<td>59.166.0.6</td>
+<td>2142</td>
+<td>149.171.126.4</td>
+<td>53</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001134</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="even">
+<td>10.40.182.3</td>
+<td>0</td>
+<td>10.40.182.3</td>
+<td>0</td>
+<td>arp</td>
+<td>INT</td>
+<td>0</td>
+<td>46</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr class="odd">
+<td>59.166.0.5</td>
+<td>40726</td>
+<td>149.171.126.6</td>
+<td>53</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001126</td>
+<td>146</td>
+<td>178</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="even">
+<td>59.166.0.7</td>
+<td>12660</td>
+<td>149.171.126.4</td>
+<td>53</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001167</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="odd">
+<td>10.40.170.2</td>
+<td>0</td>
+<td>10.40.170.2</td>
+<td>0</td>
+<td>arp</td>
+<td>INT</td>
+<td>0</td>
+<td>46</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr class="even">
+<td>10.40.170.2</td>
+<td>0</td>
+<td>10.40.170.2</td>
+<td>0</td>
+<td>arp</td>
+<td>INT</td>
+<td>0</td>
+<td>46</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr class="odd">
+<td>10.40.182.3</td>
+<td>0</td>
+<td>10.40.182.3</td>
+<td>0</td>
+<td>arp</td>
+<td>INT</td>
+<td>0</td>
+<td>46</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr class="even">
+<td>59.166.0.1</td>
+<td>48847</td>
+<td>149.171.126.5</td>
+<td>53</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001093</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="odd">
+<td>59.166.0.1</td>
+<td>24266</td>
+<td>149.171.126.9</td>
+<td>41049</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001851</td>
+<td>528</td>
+<td>304</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="even">
+<td>59.166.0.1</td>
+<td>10393</td>
+<td>149.171.126.6</td>
+<td>44307</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001749</td>
+<td>528</td>
+<td>304</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="odd">
+<td>59.166.0.2</td>
+<td>62539</td>
+<td>149.171.126.4</td>
+<td>53</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001128</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="even">
+<td>59.166.0.1</td>
+<td>21270</td>
+<td>149.171.126.9</td>
+<td>111</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.005153</td>
+<td>568</td>
+<td>312</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="odd">
+<td>59.166.0.1</td>
+<td>8989</td>
+<td>149.171.126.6</td>
+<td>111</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.004898</td>
+<td>568</td>
+<td>312</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="even">
+<td>59.166.0.4</td>
+<td>49346</td>
+<td>149.171.126.5</td>
+<td>53</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001111</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="odd">
+<td>175.45.176.3</td>
+<td>21223</td>
+<td>149.171.126.18</td>
+<td>32780</td>
+<td>udp</td>
+<td>INT</td>
+<td>0.000021</td>
+<td>728</td>
+<td>0</td>
+<td>254</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr class="even">
+<td>175.45.176.2</td>
+<td>23357</td>
+<td>149.171.126.16</td>
+<td>80</td>
+<td>tcp</td>
+<td>FIN</td>
+<td>0.240139</td>
+<td>918</td>
+<td>25552</td>
+<td>62</td>
+<td>252</td>
+<td>2</td>
+</tr>
+<tr class="odd">
+<td>175.45.176.0</td>
+<td>13284</td>
+<td>149.171.126.16</td>
+<td>80</td>
+<td>tcp</td>
+<td>FIN</td>
+<td>2.39039</td>
+<td>1362</td>
+<td>268</td>
+<td>254</td>
+<td>252</td>
+<td>6</td>
+</tr>
+<tr class="even">
+<td>59.166.0.3</td>
+<td>4192</td>
+<td>149.171.126.9</td>
+<td>53</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001101</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="odd">
+<td>59.166.0.2</td>
+<td>26872</td>
+<td>149.171.126.8</td>
+<td>53</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001082</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="even">
+<td>59.166.0.8</td>
+<td>24946</td>
+<td>149.171.126.2</td>
+<td>53</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001122</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="odd">
+<td>59.166.0.9</td>
+<td>5685</td>
+<td>149.171.126.6</td>
+<td>53</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001141</td>
+<td>146</td>
+<td>178</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="even">
+<td>59.166.0.0</td>
+<td>22848</td>
+<td>149.171.126.1</td>
+<td>53</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001164</td>
+<td>146</td>
+<td>178</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="odd">
+<td>59.166.0.5</td>
+<td>28565</td>
+<td>149.171.126.9</td>
+<td>53</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001127</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+<tr class="even">
+<td>59.166.0.7</td>
+<td>46719</td>
+<td>149.171.126.4</td>
+<td>53</td>
+<td>udp</td>
+<td>CON</td>
+<td>0.001073</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+</tr>
+</tbody>
+</table>
 <p>Truncated to 30 rows</p>
 <p>Truncated to 12 cols</p>
 <div class="section" id="removing-unnecessary-data">
@@ -1585,7 +2024,446 @@ so we drop those columns.</p>
 </div>
 </div>
 </div>
-<p>[TABLE]</p>
+<table>
+<thead>
+<tr class="header">
+<th>_c4</th>
+<th>_c5</th>
+<th>_c6</th>
+<th>_c7</th>
+<th>_c8</th>
+<th>_c9</th>
+<th>_c10</th>
+<th>_c11</th>
+<th>_c12</th>
+<th>_c13</th>
+<th>_c14</th>
+<th>_c15</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>udp</td>
+<td>CON</td>
+<td>0.001055</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>dns</td>
+<td>500473.9375</td>
+<td>621800.9375</td>
+</tr>
+<tr class="even">
+<td>udp</td>
+<td>CON</td>
+<td>0.036133</td>
+<td>528</td>
+<td>304</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>-</td>
+<td>87676.08594</td>
+<td>50480.17188</td>
+</tr>
+<tr class="odd">
+<td>udp</td>
+<td>CON</td>
+<td>0.001119</td>
+<td>146</td>
+<td>178</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>dns</td>
+<td>521894.5313</td>
+<td>636282.375</td>
+</tr>
+<tr class="even">
+<td>udp</td>
+<td>CON</td>
+<td>0.001209</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>dns</td>
+<td>436724.5625</td>
+<td>542597.1875</td>
+</tr>
+<tr class="odd">
+<td>udp</td>
+<td>CON</td>
+<td>0.001169</td>
+<td>146</td>
+<td>178</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>dns</td>
+<td>499572.25</td>
+<td>609067.5625</td>
+</tr>
+<tr class="even">
+<td>udp</td>
+<td>CON</td>
+<td>0.078339</td>
+<td>568</td>
+<td>312</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>-</td>
+<td>43503.23438</td>
+<td>23896.14258</td>
+</tr>
+<tr class="odd">
+<td>udp</td>
+<td>CON</td>
+<td>0.001134</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>dns</td>
+<td>465608.4688</td>
+<td>578483.25</td>
+</tr>
+<tr class="even">
+<td>arp</td>
+<td>INT</td>
+<td>0</td>
+<td>46</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>-</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr class="odd">
+<td>udp</td>
+<td>CON</td>
+<td>0.001126</td>
+<td>146</td>
+<td>178</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>dns</td>
+<td>518650.0938</td>
+<td>632326.8125</td>
+</tr>
+<tr class="even">
+<td>udp</td>
+<td>CON</td>
+<td>0.001167</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>dns</td>
+<td>452442.1563</td>
+<td>562125.0625</td>
+</tr>
+<tr class="odd">
+<td>arp</td>
+<td>INT</td>
+<td>0</td>
+<td>46</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>-</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr class="even">
+<td>arp</td>
+<td>INT</td>
+<td>0</td>
+<td>46</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>-</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr class="odd">
+<td>arp</td>
+<td>INT</td>
+<td>0</td>
+<td>46</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>-</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr class="even">
+<td>udp</td>
+<td>CON</td>
+<td>0.001093</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>dns</td>
+<td>483074.0938</td>
+<td>600182.9375</td>
+</tr>
+<tr class="odd">
+<td>udp</td>
+<td>CON</td>
+<td>0.001851</td>
+<td>528</td>
+<td>304</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>-</td>
+<td>1711507.25</td>
+<td>985413.3125</td>
+</tr>
+<tr class="even">
+<td>udp</td>
+<td>CON</td>
+<td>0.001749</td>
+<td>528</td>
+<td>304</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>-</td>
+<td>1811320.75</td>
+<td>1042881.625</td>
+</tr>
+<tr class="odd">
+<td>udp</td>
+<td>CON</td>
+<td>0.001128</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>dns</td>
+<td>468085.125</td>
+<td>581560.3125</td>
+</tr>
+<tr class="even">
+<td>udp</td>
+<td>CON</td>
+<td>0.005153</td>
+<td>568</td>
+<td>312</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>-</td>
+<td>661362.3125</td>
+<td>363283.5313</td>
+</tr>
+<tr class="odd">
+<td>udp</td>
+<td>CON</td>
+<td>0.004898</td>
+<td>568</td>
+<td>312</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>-</td>
+<td>695794.1875</td>
+<td>382196.8125</td>
+</tr>
+<tr class="even">
+<td>udp</td>
+<td>CON</td>
+<td>0.001111</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>dns</td>
+<td>475247.5313</td>
+<td>590459.0625</td>
+</tr>
+<tr class="odd">
+<td>udp</td>
+<td>INT</td>
+<td>0.000021</td>
+<td>728</td>
+<td>0</td>
+<td>254</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>-</td>
+<td>138666672</td>
+<td>0</td>
+</tr>
+<tr class="even">
+<td>tcp</td>
+<td>FIN</td>
+<td>0.240139</td>
+<td>918</td>
+<td>25552</td>
+<td>62</td>
+<td>252</td>
+<td>2</td>
+<td>10</td>
+<td>http</td>
+<td>28050.42188</td>
+<td>815794.1875</td>
+</tr>
+<tr class="odd">
+<td>tcp</td>
+<td>FIN</td>
+<td>2.39039</td>
+<td>1362</td>
+<td>268</td>
+<td>254</td>
+<td>252</td>
+<td>6</td>
+<td>1</td>
+<td>http</td>
+<td>4233.619141</td>
+<td>749.668518</td>
+</tr>
+<tr class="even">
+<td>udp</td>
+<td>CON</td>
+<td>0.001101</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>dns</td>
+<td>479564.0313</td>
+<td>595822</td>
+</tr>
+<tr class="odd">
+<td>udp</td>
+<td>CON</td>
+<td>0.001082</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>dns</td>
+<td>487985.2188</td>
+<td>606284.6875</td>
+</tr>
+<tr class="even">
+<td>udp</td>
+<td>CON</td>
+<td>0.001122</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>dns</td>
+<td>470588.2188</td>
+<td>584670.1875</td>
+</tr>
+<tr class="odd">
+<td>udp</td>
+<td>CON</td>
+<td>0.001141</td>
+<td>146</td>
+<td>178</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>dns</td>
+<td>511831.75</td>
+<td>624014.0625</td>
+</tr>
+<tr class="even">
+<td>udp</td>
+<td>CON</td>
+<td>0.001164</td>
+<td>146</td>
+<td>178</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>dns</td>
+<td>501718.2188</td>
+<td>611683.8125</td>
+</tr>
+<tr class="odd">
+<td>udp</td>
+<td>CON</td>
+<td>0.001127</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>dns</td>
+<td>468500.4688</td>
+<td>582076.3125</td>
+</tr>
+<tr class="even">
+<td>udp</td>
+<td>CON</td>
+<td>0.001073</td>
+<td>132</td>
+<td>164</td>
+<td>31</td>
+<td>29</td>
+<td>0</td>
+<td>0</td>
+<td>dns</td>
+<td>492078.2813</td>
+<td>611370</td>
+</tr>
+</tbody>
+</table>
 <p>Truncated to 30 rows</p>
 <p>Truncated to 12 cols</p>
 </div>
