--- a/000_1-sds-3-x/001_whySpark.html
+++ b/000_1-sds-3-x/001_whySpark.html
@@ -1339,6 +1339,15 @@ thousands of deployments.</p></li>
 </div>
 </div>
 </div>
+<iframe 
+ src="https://cacm.acm.org/magazines/2016/11/209116-apache-spark/fulltext"
+ width="95%" height="600">
+  <p>
+    <a href="http://spark.apache.org/docs/latest/index.html">
+      Fallback link for browsers that, unlikely, don't support frames
+    </a>
+  </p>
+</iframe>
 <p>Spark 3.0 is the latest version now (20200918) and it should be seen as
 the latest step in the evolution of tools in the big data ecosystem as
 summarized in
