--- a/000_1-sds-3-x/003_00_scalaCrashCourse.html
+++ b/000_1-sds-3-x/003_00_scalaCrashCourse.html
@@ -1580,6 +1580,16 @@ science</a>.</p>
 </div>
 </div>
 </div>
+<iframe 
+ src="https://darrenjw.wordpress.com/2013/12/23/scala-as-a-platform-for-statistical-computing-and-data-science/"
+ width="95%" height="500"
+ sandbox>
+  <p>
+    <a href="http://spark.apache.org/docs/latest/index.html">
+      Fallback link for browsers that, unlikely, don't support frames
+    </a>
+  </p>
+</iframe>
 </div>
 </div>
 <div class="section" id="let-s-get-our-hands-dirty-in-scala">
