--- a/000_9-sds-3-x-trends/030a_gdelt_EOI_detection.html
+++ b/000_9-sds-3-x-trends/030a_gdelt_EOI_detection.html
@@ -1533,7 +1533,136 @@ val oilEventCoverageDF = oilEventWeeklyCoverageC.join(oil_gas_eventDF,oil_gas_ev
 </div>
 </div>
 </div>
-<p>[TABLE]</p>
+<table>
+<thead>
+<tr class="header">
+<th>date</th>
+<th>coverage</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>2018-05-11</td>
+<td>27.48697210375559</td>
+</tr>
+<tr class="even">
+<td>2018-05-12</td>
+<td>23.96793050873498</td>
+</tr>
+<tr class="odd">
+<td>2018-05-10</td>
+<td>22.99672475258935</td>
+</tr>
+<tr class="even">
+<td>2018-05-09</td>
+<td>22.38628622328047</td>
+</tr>
+<tr class="odd">
+<td>2018-05-08</td>
+<td>20.177500233721812</td>
+</tr>
+<tr class="even">
+<td>2018-05-13</td>
+<td>18.849262389568946</td>
+</tr>
+<tr class="odd">
+<td>2018-05-07</td>
+<td>18.35656161511339</td>
+</tr>
+<tr class="even">
+<td>2018-10-20</td>
+<td>15.611327297311004</td>
+</tr>
+<tr class="odd">
+<td>2018-04-16</td>
+<td>15.462361791574757</td>
+</tr>
+<tr class="even">
+<td>2018-12-02</td>
+<td>15.359168150928163</td>
+</tr>
+<tr class="odd">
+<td>2018-04-15</td>
+<td>15.283319413257988</td>
+</tr>
+<tr class="even">
+<td>2018-05-06</td>
+<td>15.074567688377867</td>
+</tr>
+<tr class="odd">
+<td>2018-10-14</td>
+<td>14.45618200990938</td>
+</tr>
+<tr class="even">
+<td>2018-12-03</td>
+<td>14.02903668842356</td>
+</tr>
+<tr class="odd">
+<td>2018-04-21</td>
+<td>13.98462351551001</td>
+</tr>
+<tr class="even">
+<td>2018-10-15</td>
+<td>13.913223469927233</td>
+</tr>
+<tr class="odd">
+<td>2018-10-17</td>
+<td>13.899999502069955</td>
+</tr>
+<tr class="even">
+<td>2018-03-10</td>
+<td>13.596583766909582</td>
+</tr>
+<tr class="odd">
+<td>2018-03-11</td>
+<td>13.328385180680646</td>
+</tr>
+<tr class="even">
+<td>2018-04-22</td>
+<td>13.3135796805744</td>
+</tr>
+<tr class="odd">
+<td>2018-04-17</td>
+<td>13.069456001928245</td>
+</tr>
+<tr class="even">
+<td>2018-10-21</td>
+<td>13.05918925998796</td>
+</tr>
+<tr class="odd">
+<td>2018-10-19</td>
+<td>13.042145921984307</td>
+</tr>
+<tr class="even">
+<td>2018-12-01</td>
+<td>12.68628883879963</td>
+</tr>
+<tr class="odd">
+<td>2018-10-18</td>
+<td>12.39577814835038</td>
+</tr>
+<tr class="even">
+<td>2018-12-04</td>
+<td>12.259894218727641</td>
+</tr>
+<tr class="odd">
+<td>2018-04-18</td>
+<td>12.198298415680537</td>
+</tr>
+<tr class="even">
+<td>2018-10-16</td>
+<td>11.886229012014407</td>
+</tr>
+<tr class="odd">
+<td>2018-04-20</td>
+<td>11.528415547014676</td>
+</tr>
+<tr class="even">
+<td>2018-03-08</td>
+<td>11.404094561394555</td>
+</tr>
+</tbody>
+</table>
 <p>Truncated to 30 rows</p>
 <p><strong>Coverage Grouped by Country</strong></p>
 <div class="cell docutils container">
@@ -1543,7 +1672,260 @@ val oilEventCoverageDF = oilEventWeeklyCoverageC.join(oil_gas_eventDF,oil_gas_ev
 </div>
 </div>
 </div>
-<p>[TABLE]</p>
+<table>
+<thead>
+<tr class="header">
+<th>country</th>
+<th>date</th>
+<th>articles</th>
+<th>goldstein</th>
+<th>normArticles</th>
+<th>coverage</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>US</td>
+<td>2018-04-19</td>
+<td>293978.0</td>
+<td>1.407558902630007</td>
+<td>28.45287299502091</td>
+<td>17.06571958044547</td>
+</tr>
+<tr class="even">
+<td>US</td>
+<td>2018-03-10</td>
+<td>121473.0</td>
+<td>1.1468181832778184</td>
+<td>11.665868703199738</td>
+<td>16.997419653664288</td>
+</tr>
+<tr class="odd">
+<td>US</td>
+<td>2018-04-20</td>
+<td>128613.0</td>
+<td>1.0959412821911159</td>
+<td>12.360684567340506</td>
+<td>16.841162544561804</td>
+</tr>
+<tr class="even">
+<td>US</td>
+<td>2018-04-16</td>
+<td>121972.0</td>
+<td>1.3305209806577958</td>
+<td>11.714427963172602</td>
+<td>16.804795231624787</td>
+</tr>
+<tr class="odd">
+<td>US</td>
+<td>2018-04-18</td>
+<td>325093.0</td>
+<td>0.999421967554939</td>
+<td>31.480771540222594</td>
+<td>16.696304975447223</td>
+</tr>
+<tr class="even">
+<td>US</td>
+<td>2018-04-21</td>
+<td>94415.0</td>
+<td>1.0894224136528574</td>
+<td>9.032769592286447</td>
+<td>16.663009977555724</td>
+</tr>
+<tr class="odd">
+<td>US</td>
+<td>2018-03-11</td>
+<td>192305.0</td>
+<td>1.2124047174956842</td>
+<td>18.55875347754412</td>
+<td>16.321746675576378</td>
+</tr>
+<tr class="even">
+<td>US</td>
+<td>2018-04-17</td>
+<td>198695.0</td>
+<td>0.9504058125505637</td>
+<td>19.180584482006232</td>
+<td>16.11808416237786</td>
+</tr>
+<tr class="odd">
+<td>US</td>
+<td>2018-03-12</td>
+<td>121061.0</td>
+<td>1.056970576384162</td>
+<td>11.625775686949599</td>
+<td>16.021090759334434</td>
+</tr>
+<tr class="even">
+<td>US</td>
+<td>2018-03-08</td>
+<td>167306.0</td>
+<td>1.5292333364014825</td>
+<td>16.126022134735287</td>
+<td>16.003087827280368</td>
+</tr>
+<tr class="odd">
+<td>US</td>
+<td>2018-05-10</td>
+<td>239649.0</td>
+<td>1.3566950727174794</td>
+<td>23.16594707304559</td>
+<td>15.950483120799603</td>
+</tr>
+<tr class="even">
+<td>US</td>
+<td>2018-03-09</td>
+<td>172436.0</td>
+<td>1.4519209693660677</td>
+<td>16.625238574937267</td>
+<td>15.93798533244701</td>
+</tr>
+<tr class="odd">
+<td>US</td>
+<td>2018-05-11</td>
+<td>156365.0</td>
+<td>1.5022545463632453</td>
+<td>15.06131900174311</td>
+<td>15.62039692875962</td>
+</tr>
+<tr class="even">
+<td>US</td>
+<td>2018-01-08</td>
+<td>125330.0</td>
+<td>0.8393292704902148</td>
+<td>12.041205508240488</td>
+<td>15.61895113344408</td>
+</tr>
+<tr class="odd">
+<td>US</td>
+<td>2018-05-09</td>
+<td>250456.0</td>
+<td>1.3739929059522307</td>
+<td>24.217610244441847</td>
+<td>15.484436561586815</td>
+</tr>
+<tr class="even">
+<td>US</td>
+<td>2018-01-07</td>
+<td>75339.0</td>
+<td>1.2413125044852495</td>
+<td>7.176424014646491</td>
+<td>15.46596096567959</td>
+</tr>
+<tr class="odd">
+<td>US</td>
+<td>2018-04-15</td>
+<td>49398.0</td>
+<td>1.055594105147478</td>
+<td>4.652023688081273</td>
+<td>15.288016926844021</td>
+</tr>
+<tr class="even">
+<td>US</td>
+<td>2018-01-09</td>
+<td>135528.0</td>
+<td>0.9914309848689641</td>
+<td>13.033604973577678</td>
+<td>15.244545754231613</td>
+</tr>
+<tr class="odd">
+<td>US</td>
+<td>2018-04-22</td>
+<td>75971.0</td>
+<td>0.8800145359764006</td>
+<td>7.237925923069035</td>
+<td>15.150165904258587</td>
+</tr>
+<tr class="even">
+<td>US</td>
+<td>2018-03-13</td>
+<td>254054.0</td>
+<td>0.8595803767070289</td>
+<td>24.567742944606902</td>
+<td>15.046596912905073</td>
+</tr>
+<tr class="odd">
+<td>US</td>
+<td>2018-05-08</td>
+<td>249174.0</td>
+<td>1.2410824104135474</td>
+<td>24.092854790964473</td>
+<td>15.008311140799359</td>
+</tr>
+<tr class="even">
+<td>US</td>
+<td>2018-01-10</td>
+<td>269866.0</td>
+<td>0.8955041613611789</td>
+<td>26.106458412925367</td>
+<td>14.808527251572327</td>
+</tr>
+<tr class="odd">
+<td>US</td>
+<td>2018-03-14</td>
+<td>156586.0</td>
+<td>1.0109118691857695</td>
+<td>15.082825207061752</td>
+<td>14.661737321411014</td>
+</tr>
+<tr class="even">
+<td>US</td>
+<td>2018-12-04</td>
+<td>143569.0</td>
+<td>1.300000004727775</td>
+<td>13.816099982479066</td>
+<td>14.583942411932588</td>
+</tr>
+<tr class="odd">
+<td>US</td>
+<td>2018-08-19</td>
+<td>39816.0</td>
+<td>0.433582708066142</td>
+<td>3.7195691208268133</td>
+<td>14.553163653965246</td>
+</tr>
+<tr class="even">
+<td>US</td>
+<td>2018-08-20</td>
+<td>147857.0</td>
+<td>0.7519570241924532</td>
+<td>14.23337875354848</td>
+<td>14.451221182341712</td>
+</tr>
+<tr class="odd">
+<td>US</td>
+<td>2018-06-20</td>
+<td>191796.0</td>
+<td>1.2209328797970436</td>
+<td>18.509221086108873</td>
+<td>14.431702945581938</td>
+</tr>
+<tr class="even">
+<td>US</td>
+<td>2018-05-07</td>
+<td>122164.0</td>
+<td>1.1907639221566013</td>
+<td>11.733112087250337</td>
+<td>14.42387618824878</td>
+</tr>
+<tr class="odd">
+<td>US</td>
+<td>2018-08-21</td>
+<td>249440.0</td>
+<td>0.2888848554225259</td>
+<td>24.118740087863834</td>
+<td>14.406957602681365</td>
+</tr>
+<tr class="even">
+<td>US</td>
+<td>2018-11-05</td>
+<td>120204.0</td>
+<td>0.41470108078521906</td>
+<td>11.54237832062346</td>
+<td>14.290807411707053</td>
+</tr>
+</tbody>
+</table>
 <p>Truncated to 30 rows</p>
 <p><strong>Coverage without USA</strong></p>
 <div class="cell docutils container">
@@ -1553,7 +1935,260 @@ val oilEventCoverageDF = oilEventWeeklyCoverageC.join(oil_gas_eventDF,oil_gas_ev
 </div>
 </div>
 </div>
-<p>[TABLE]</p>
+<table>
+<thead>
+<tr class="header">
+<th>country</th>
+<th>date</th>
+<th>articles</th>
+<th>goldstein</th>
+<th>normArticles</th>
+<th>coverage</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>SA</td>
+<td>2018-10-18</td>
+<td>101417.0</td>
+<td>-6.130682206289335e-2</td>
+<td>9.714156242246343</td>
+<td>12.684765148069792</td>
+</tr>
+<tr class="even">
+<td>SA</td>
+<td>2018-10-17</td>
+<td>194570.0</td>
+<td>-7.576013765788663e-2</td>
+<td>18.779167753773645</td>
+<td>12.679829981367712</td>
+</tr>
+<tr class="odd">
+<td>SA</td>
+<td>2018-10-19</td>
+<td>73494.0</td>
+<td>-0.17525225873013728</td>
+<td>6.996881259837007</td>
+<td>12.331977189200236</td>
+</tr>
+<tr class="even">
+<td>SA</td>
+<td>2018-10-16</td>
+<td>232742.0</td>
+<td>3.679466928679461e-2</td>
+<td>22.493805171978323</td>
+<td>11.147328652530458</td>
+</tr>
+<tr class="odd">
+<td>SA</td>
+<td>2018-10-20</td>
+<td>128817.0</td>
+<td>-0.5064171118771329</td>
+<td>12.3805364491731</td>
+<td>10.709919962067769</td>
+</tr>
+<tr class="even">
+<td>SA</td>
+<td>2018-10-15</td>
+<td>141823.0</td>
+<td>-0.40703297031722663</td>
+<td>13.646191229147163</td>
+<td>10.667699958478424</td>
+</tr>
+<tr class="odd">
+<td>SA</td>
+<td>2018-10-21</td>
+<td>50740.0</td>
+<td>-0.44518900380383447</td>
+<td>4.782617930332941</td>
+<td>9.754541197935199</td>
+</tr>
+<tr class="even">
+<td>SA</td>
+<td>2018-10-14</td>
+<td>50385.0</td>
+<td>-0.35571878810744473</td>
+<td>4.748071763418379</td>
+<td>9.574067017297434</td>
+</tr>
+<tr class="odd">
+<td>SA</td>
+<td>2018-10-22</td>
+<td>116446.0</td>
+<td>-0.39537088422139</td>
+<td>11.176675517060293</td>
+<td>8.871146358262829</td>
+</tr>
+<tr class="even">
+<td>SA</td>
+<td>2018-10-23</td>
+<td>116063.0</td>
+<td>7.219327161770644e-2</td>
+<td>11.139404582051062</td>
+<td>8.4196272615956</td>
+</tr>
+<tr class="odd">
+<td>IR</td>
+<td>2018-05-10</td>
+<td>98317.0</td>
+<td>1.8003115311205307</td>
+<td>9.412485488907915</td>
+<td>7.607938308822751</td>
+</tr>
+<tr class="even">
+<td>IR</td>
+<td>2018-05-11</td>
+<td>42017.0</td>
+<td>1.7541430259671034</td>
+<td>3.9337553556970977</td>
+<td>7.539958125236349</td>
+</tr>
+<tr class="odd">
+<td>IR</td>
+<td>2018-05-09</td>
+<td>196921.0</td>
+<td>2.6776073069410615</td>
+<td>19.007950960579663</td>
+<td>7.532895971195062</td>
+</tr>
+<tr class="even">
+<td>IR</td>
+<td>2018-05-08</td>
+<td>170920.0</td>
+<td>2.2875000016386844</td>
+<td>16.47771184524015</td>
+<td>7.434123127763285</td>
+</tr>
+<tr class="odd">
+<td>SA</td>
+<td>2018-10-13</td>
+<td>18580.0</td>
+<td>-0.1984234246349818</td>
+<td>1.6530271473123386</td>
+<td>7.281967072680838</td>
+</tr>
+<tr class="even">
+<td>IR</td>
+<td>2018-05-07</td>
+<td>20107.0</td>
+<td>1.4506188108041735</td>
+<td>1.8016243216180743</td>
+<td>7.117785893098956</td>
+</tr>
+<tr class="odd">
+<td>SA</td>
+<td>2018-10-24</td>
+<td>125847.0</td>
+<td>0.5623159577563802</td>
+<td>12.091516404845638</td>
+<td>6.782917455015267</td>
+</tr>
+<tr class="even">
+<td>IR</td>
+<td>2018-09-25</td>
+<td>74769.0</td>
+<td>0.8068529877863014</td>
+<td>7.120955521290716</td>
+<td>6.407858687535199</td>
+</tr>
+<tr class="odd">
+<td>IR</td>
+<td>2018-09-24</td>
+<td>49741.0</td>
+<td>-0.17379988162003204</td>
+<td>4.685402097240976</td>
+<td>6.326894149865014</td>
+</tr>
+<tr class="even">
+<td>SA</td>
+<td>2018-10-25</td>
+<td>37872.0</td>
+<td>-4.61491453837066e-2</td>
+<td>3.5303923645397473</td>
+<td>6.225048991387719</td>
+</tr>
+<tr class="odd">
+<td>IR</td>
+<td>2018-09-23</td>
+<td>109693.0</td>
+<td>-1.3702367478320134</td>
+<td>10.51951984051371</td>
+<td>6.051192104694152</td>
+</tr>
+<tr class="even">
+<td>IR</td>
+<td>2018-05-06</td>
+<td>8554.0</td>
+<td>1.8664000000953673</td>
+<td>0.6773655431281175</td>
+<td>5.899091657123841</td>
+</tr>
+<tr class="odd">
+<td>IR</td>
+<td>2018-05-12</td>
+<td>16179.0</td>
+<td>1.4345649601147912</td>
+<td>1.4193782831944137</td>
+<td>5.454912752058583</td>
+</tr>
+<tr class="even">
+<td>IR</td>
+<td>2018-09-22</td>
+<td>126435.0</td>
+<td>-2.2674024967179305</td>
+<td>12.1487365348337</td>
+<td>5.316311028059312</td>
+</tr>
+<tr class="odd">
+<td>IR</td>
+<td>2018-09-26</td>
+<td>62879.0</td>
+<td>1.0125302155198204</td>
+<td>5.963902212518485</td>
+<td>4.890885756461957</td>
+</tr>
+<tr class="even">
+<td>SA</td>
+<td>2018-10-26</td>
+<td>41015.0</td>
+<td>0.14595715380283414</td>
+<td>3.8362475831664185</td>
+<td>4.7543693141677945</td>
+</tr>
+<tr class="odd">
+<td>SY</td>
+<td>2018-04-14</td>
+<td>77719.0</td>
+<td>-2.241584155524131</td>
+<td>7.408029302693413</td>
+<td>4.541837402783559</td>
+</tr>
+<tr class="even">
+<td>TU</td>
+<td>2018-10-19</td>
+<td>32942.0</td>
+<td>-0.44033438425079036</td>
+<td>3.050638553585407</td>
+<td>4.493472769103172</td>
+</tr>
+<tr class="odd">
+<td>TU</td>
+<td>2018-10-17</td>
+<td>87405.0</td>
+<td>0.14014466095439565</td>
+<td>8.350604437156646</td>
+<td>4.406919676463308</td>
+</tr>
+<tr class="even">
+<td>SA</td>
+<td>2018-10-12</td>
+<td>38993.0</td>
+<td>0.3334448136131766</td>
+<td>3.6394804014727726</td>
+<td>4.4027491130530985</td>
+</tr>
+</tbody>
+</table>
 <p>Truncated to 30 rows</p>
 </div>
 <div class="section" id="step-2-extracting-the-news-around-dates-with-high-coverage-big-events">
