--- a/000_0-sds-3-x-projects/student-project-17_group-TowardsScalableTDA/00_introduction.html
+++ b/000_0-sds-3-x-projects/student-project-17_group-TowardsScalableTDA/00_introduction.html
@@ -1296,12 +1296,17 @@ high-density regions in data, clusters and outliers, as well as for
 visualization purposes.</p>
 <p>A histogram can be considered as a simple density estimator. Other
 well-known methods include: - a k-nearest-neighbor density estimator,
-which describes the density <em>p()</em> at a point <em>x</em> as $<span class="math notranslate nohighlight">\(p(x) \\cong
-\\frac{1}{d*k(x)}\)</span><span class="math notranslate nohighlight">\( where d*k(x) is the distance to the *k*th nearest
-neighbor of *x*; - a kernel density estimator, which requires a
-selection of a kernel probability distribution *K* and a bandwidth *h*
-and essentially places the distributions at the data points, giving the
-density estimation \)</span><span class="math notranslate nohighlight">\(p(x) \\cong \\sum*i K(\\frac{x - x*i}{h})\)</span>$</p>
+which describes the density <em>p()</em> at a point <em>x</em> as</p>
+<div class="math notranslate nohighlight">
+\[  p(x) \cong \frac{1}{d_k(x)}
+\]</div>
+<p>where d_k(x) is the distance to the <em>k</em>th nearest neighbor of <em>x</em>; - a
+kernel density estimator, which requires a selection of a kernel
+probability distribution <em>K</em> and a bandwidth <em>h</em> and essentially places
+the distributions at the data points, giving the density estimation</p>
+<div class="math notranslate nohighlight">
+\[  p(x) \cong \sum_i K(\frac{x - x_i}{h})
+\]</div>
 <p>All of the mentioned methods are sensitive to parameter selection, such
 as choosing the right number of neighbors or a fitting bandwidth.</p>
 <p><strong>Voronoi diagrams</strong> are widely used in many areas, including computer
@@ -1318,7 +1323,8 @@ reasonable number of points. In the worst case, the number of geometric
 elements of the diagram (such as Voronoi vertices, edges and polyhedra
 of different dimensions that arise on the cell boundaries) grows as</p>
 <div class="math notranslate nohighlight">
-\[\begin{split}O(n^{\\lceil{d/2}\\rceil})\end{split}\]</div>
+\[  O(n^{\lceil{d/2}\rceil})
+\]</div>
 <p><strong>Our method.</strong> In this work, we use some intuition about the Voronoi
 diagrams to develop a new method of density estimation. In addition, we
 apply a methodology from our previous work which allows one to work with
@@ -1334,8 +1340,7 @@ two-dimensional space built over points sampled from a Gaussian
 distribution. Voronoi cells in the center of the distribution appear
 naturally smaller in comparison with other cells, and the cell size
 increases when we move away from the center.</p>
-<p>&lt;img width=400pt
-src=”files/group17/images/voronoi_gaussian.png”/&gt;</p>
+<img width=400pt src="files/group17/images/voronoi_gaussian.png"/>
 <p>This intuition follows, in a way, a one-nearest-neighbor density
 estimator: the distance <em>d</em> to the nearest neighbor is inversly
 proportional to the estimated density of the point, and at the same
@@ -1347,7 +1352,8 @@ want to understand the density, and all other points are the training
 (unlabeled) data that provides information about the density. Then, let
 us try to find a reasonable approximation of the density in a form of</p>
 <div class="math notranslate nohighlight">
-\[\begin{split}p(x) = \\frac{c}{size(Cell(x))}\end{split}\]</div>
+\[  p(x) = \frac{c}{size(Cell(x))}
+\]</div>
 <p>where <em>c</em> is some constant, <em>Cell</em> denotes the Voronoi cell of <em>x</em>, and
 <em>size</em> is some measure of a cell.</p>
 <p>Note: at any moment, the Voronoi diagram consists of only one query
@@ -1365,13 +1371,13 @@ functions</em>, inspired by how alpha-complexes are motivated and
 constructed in the area of topological data analysis, where we consider
 a set of balls of an increasing radius with intersection with voronoi
 cells:</p>
-<p>&lt;img width=250pt src=”files/group17/images/alpha<em>1.png”/&gt; &lt;img
-width=250pt src=”files/group17/images/alpha</em>2.png”/&gt; &lt;img
-width=250pt src=”files/group17/images/alpha_3.png”/&gt;</p>
+<img width=250pt src="files/group17/images/alpha_1.png"/>
+<img width=250pt src="files/group17/images/alpha_2.png"/>
+<img width=250pt src="files/group17/images/alpha_3.png"/>
 <p>We define the volume function as follows:</p>
 <div class="math notranslate nohighlight">
-\[\begin{split}\\overline{Vol}*d(x)(r) = \\frac{Vol*d(Cell(x) \\cap
-B*r(x))}{Vol*d(B\_r)}\end{split}\]</div>
+\[  \overline{Vol}_d(x)(r) = \frac{Vol_d(Cell(x) \cap B_r(x))}{Vol_d(B_r)}
+\]</div>
 <p>Here, <em>r</em> is a positive radius, <em>Vol()</em> denotes the standard
 d-dimensional volume, and *B_r(x)* is a d-dimensional ball of radius
 <em>r</em> centered at <em>x</em>. The volume function of <em>x</em> returns a function that
@@ -1383,14 +1389,14 @@ start to leave the boundary.</p>
 <p>Below are two images. On the left, a simple rectangular Voronoi cell
 with a point, generating it. On the right, a depiction of the volume
 function for this cell.</p>
-<p>&lt;img width=300pt src=”files/group17/images/rect.png”/&gt; &lt;img
-width=300pt src=”files/group17/images/rect_vol.png”/&gt;</p>
+<img width=300pt src="files/group17/images/rect.png"/>
+<img width=300pt src="files/group17/images/rect_vol.png"/>
 <p>If we go into higher dimensions, we will not be able to see the steps
 that the function makes anymore. Below is an example, which we
 approximated (with a method described below) on MNIST data
 (784-dimensional) some time ago of volume functions for different data
 points:</p>
-<p>&lt;img width=400pt src=”files/group17/images/mnist_vol.png”/&gt;</p>
+<img width=400pt src="files/group17/images/mnist_vol.png"/>
 <p>On the picture above, we can guess that, for example, the point with the
 light-blue volume curve is located in a lower-density region than other
 given points, based on the fact that its volume function is greater than
@@ -1419,9 +1425,8 @@ example, the approximations of the volume functions become
 piecewise-constant.</p>
 <p>Therefore, the formula for the <em>size(x)</em> becomes:</p>
 <div class="math notranslate nohighlight">
-\[\begin{split}size(x) = \\int*0^{inf}{\\overline{Vol}*{d-1}(x)(r) dr} =
-\\int*0^{inf}{ \\frac{Vol*{d-1}(Cell(x) \\cap \\hat{S}*r(x))}{Vol*{d-1}(
-\\hat{S}\_r )} dr}\end{split}\]</div>
+\[  size(x) = \int_0^{inf}{\overline{Vol}_{d-1}(x)(r) dr} = \int_0^{inf}{ \frac{Vol_{d-1}(Cell(x) \cap \hat{S}_r(x))}{Vol_{d-1}( \hat{S}_r )} dr}
+\]</div>
 <p>where *S_r(x)* denotes a hypersphere of radius <em>r</em>, and a “^” denotes
 that we only consider sections of a sphere where the cell is finite.</p>
 <p><strong>Integral computation.</strong></p>
@@ -1435,8 +1440,8 @@ starting from the query point. For each ray, we record where it hits the
 boundary of the Voronoi cell. The length is computed by the following
 equation:</p>
 <div class="math notranslate nohighlight">
-\[\begin{split}l(x, m) = \\min*{i=1..N, \\langle m, x - x*i \\rangle &amp;gt; 0}
-\\frac{\\lVert x - x*i \\rVert^2}{2\\langle m, x - x*i \\rangle }\end{split}\]</div>
+\[  l(x, m) = \min_{i=1..N, \langle m, x - x_i \rangle &gt; 0} \frac{\lVert x - x_i \rVert^2}{2\langle m, x - x_i \rangle }
+\]</div>
 <p>Here, <em>x</em> is the origin of the ray (the generator/query point), <em>m</em> is
 the directional unit vector, *x_i* are other data points. The
 “infinite” directions are excluded. The condition in the minimum
@@ -1445,18 +1450,21 @@ can’t find an intersection behind the ray.</p>
 <p>After casting <em>T</em> rays from a point, we can approximate the volume
 function as:</p>
 <div class="math notranslate nohighlight">
-\[\begin{split}\\overline{Vol}*{d-1}(x)(r) = \\frac{1}{T}\\sum*{t=1}^{T}
-\\mathbb{1}\\left\[l(x, m\_t) \\ge r \\right\]\end{split}\]</div>
+\[  \overline{Vol}_{d-1}(x)(r) = \frac{1}{T}\sum_{t=1}^{T} \mathbb{1}\left[l(x, m_t) \ge r \right]
+\]</div>
 <p>The integral of the function can be easily computed as a sum of all
 lengths:</p>
 <div class="math notranslate nohighlight">
-\[\begin{split}size(x) = \\frac{1}{T}\\sum*{t=1}^{T} l(x, m*t)\end{split}\]</div>
+\[  size(x) = \frac{1}{T}\sum_{t=1}^{T} l(x, m_t)
+\]</div>
 <p>And, our (unnormalized) density:</p>
 <div class="math notranslate nohighlight">
-\[\begin{split}\\tilde{p}(x) = \\frac{T}{\\sum*{t=1}^{T} l(x, m*t)}\end{split}\]</div>
+\[  \tilde{p}(x) = \frac{T}{\sum_{t=1}^{T} l(x, m_t)}
+\]</div>
 <p>Overall, the method’s compexity with some optimizations is:</p>
 <div class="math notranslate nohighlight">
-\[O(NMT + NMD + NTD + MTD)\]</div>
+\[  O(NMT + NMD + NTD + MTD)
+\]</div>
 <p>where <em>N</em> is the number of train points, <em>M</em> is the number of query
 points, <em>T</em> is the number of rays from each point and <em>D</em> is data
 dimensionality.</p>
@@ -1467,8 +1475,8 @@ unnormalized approximation for the density.</p>
 approximation, when the dataset size tends to infinity, approximates the
 correct “ranking” of the estimates. Namely,</p>
 <div class="math notranslate nohighlight">
-\[\begin{split}p(x*1) &amp;lt; p(x*2) \\Leftrightarrow \\tilde{p}(x*1) &amp;lt;
-\\tilde{p}(x*2)\end{split}\]</div>
+\[  p(x_1) &lt; p(x_2) \Leftrightarrow \tilde{p}(x_1) &lt; \tilde{p}(x_2)
+\]</div>
 <p>with probability 1 when data size is large enough. Here <em>p</em> is the real
 density used for point sampling, and <em>\tilde{p}</em> is the approximation.</p>
 <p>This quality is meaningful in tasks when we need to sort points
