--- a/000_9-sds-3-x-trends/03_streamable_trend_calculus_estimators.html
+++ b/000_9-sds-3-x-trends/03_streamable_trend_calculus_estimators.html
@@ -1603,7 +1603,8 @@ get an estimation of the transition probabilities.</p>
 </div>
 <p>The prediction is given by taking</p>
 <div class="math notranslate nohighlight">
-\[\begin{split} V \\in argmax(P\_K(V)) \end{split}\]</div>
+\[  V \in argmax(P_K(V)) 
+\]</div>
 <p>where *P_K(V)* is the probability that <em>V</em> is the next trend when the
 last <code class="docutils literal notranslate"><span class="pre">m</span></code> points have had reversals <em>K</em>. If there are more than one
 elements in argmax, an element is chosen uniformly at random.</p>
@@ -1766,7 +1767,117 @@ lossesDS: org.apache.spark.sql.Dataset[(Double, Long, String)] = [loss: double, 
 </div>
 </div>
 </div>
-<p>[TABLE]</p>
+<table>
+<thead>
+<tr class="header">
+<th>loss</th>
+<th>size</th>
+<th>training</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>0.9999778490236083</td>
+<td>4.0</td>
+<td>Oil and Gold</td>
+</tr>
+<tr class="even">
+<td>0.9980728650539201</td>
+<td>21.0</td>
+<td>Oil and Gold</td>
+</tr>
+<tr class="odd">
+<td>0.9527158262897114</td>
+<td>100.0</td>
+<td>Oil and Gold</td>
+</tr>
+<tr class="even">
+<td>0.8921317400174876</td>
+<td>470.0</td>
+<td>Oil and Gold</td>
+</tr>
+<tr class="odd">
+<td>0.7559988341591373</td>
+<td>2189.0</td>
+<td>Oil and Gold</td>
+</tr>
+<tr class="even">
+<td>0.5820915185077237</td>
+<td>10193.0</td>
+<td>Oil and Gold</td>
+</tr>
+<tr class="odd">
+<td>0.46675488195861264</td>
+<td>47464.0</td>
+<td>Oil and Gold</td>
+</tr>
+<tr class="even">
+<td>0.3923101136694841</td>
+<td>221012.0</td>
+<td>Oil and Gold</td>
+</tr>
+<tr class="odd">
+<td>0.3574876129408336</td>
+<td>1029129.0</td>
+<td>Oil and Gold</td>
+</tr>
+<tr class="even">
+<td>0.3355837948120082</td>
+<td>4792058.0</td>
+<td>Oil and Gold</td>
+</tr>
+<tr class="odd">
+<td>0.9973104051296998</td>
+<td>4.0</td>
+<td>Oil</td>
+</tr>
+<tr class="even">
+<td>0.9843882250072865</td>
+<td>18.0</td>
+<td>Oil</td>
+</tr>
+<tr class="odd">
+<td>0.9510789857184494</td>
+<td>77.0</td>
+<td>Oil</td>
+</tr>
+<tr class="even">
+<td>0.8574351501020111</td>
+<td>331.0</td>
+<td>Oil</td>
+</tr>
+<tr class="odd">
+<td>0.7515744680851064</td>
+<td>1414.0</td>
+<td>Oil</td>
+</tr>
+<tr class="even">
+<td>0.6360547945205479</td>
+<td>6036.0</td>
+<td>Oil</td>
+</tr>
+<tr class="odd">
+<td>0.5099656076945497</td>
+<td>25759.0</td>
+<td>Oil</td>
+</tr>
+<tr class="even">
+<td>0.4249921305741766</td>
+<td>109918.0</td>
+<td>Oil</td>
+</tr>
+<tr class="odd">
+<td>0.3735668901194987</td>
+<td>469036.0</td>
+<td>Oil</td>
+</tr>
+<tr class="even">
+<td>0.34609501603031184</td>
+<td>2001430.0</td>
+<td>Oil</td>
+</tr>
+</tbody>
+</table>
 <p>The series using only oil data is very similar to the one with both oil
 and gold data. The final data point has a loss of about 0.35, meaning
 that the model accuracy is around 65% for predicting the the trend of
@@ -1901,9 +2012,14 @@ model to itself is always 0.</p>
 <p>If there are three models labeled M<em>1, M</em>2, M<em>3 and V</em>i_j is the
 arithmetic mean described above, the matrix is</p>
 <div class="math notranslate nohighlight">
-\[\begin{split} \\begin{matrix} V*{1,1} &amp; V*{1,2} &amp; V*{1,3} \\end{matrix} $$ \end{split}\]</div>
-<p>\begin{matrix} V*{2,1} &amp; V*{2,2} &amp; V*{2,3} \end{matrix} $<span class="math notranslate nohighlight">\( \)</span><span class="math notranslate nohighlight">\(
-\\begin{matrix} V*{3,1} &amp; V*{3,2} &amp; V\_{3,3} \\end{matrix} \)</span>$</p>
+\[  \begin{matrix} V_{1,1} &amp; V_{1,2} &amp; V_{1,3} \end{matrix} 
+\]</div>
+<div class="math notranslate nohighlight">
+\[  \begin{matrix} V_{2,1} &amp; V_{2,2} &amp; V_{2,3} \end{matrix} 
+\]</div>
+<div class="math notranslate nohighlight">
+\[  \begin{matrix} V_{3,1} &amp; V_{3,2} &amp; V_{3,3} \end{matrix} 
+\]</div>
 <p>As one can see, the models differ a lot from each other, suggesting that
 the estimate can still be improved given more data.</p>
 <div class="cell docutils container">
