--- a/000_1-sds-3-x/001_whySpark.html
+++ b/000_1-sds-3-x/001_whySpark.html
@@ -1338,8 +1338,8 @@ thousands of deployments.</p></li>
 </pre></div>
 </div>
 </div>
-</div>
-<iframe 
+<div class="cell_output docutils container">
+<div class="output text_html"><iframe 
  src="https://cacm.acm.org/magazines/2016/11/209116-apache-spark/fulltext"
  width="95%" height="600">
   <p>
@@ -1347,7 +1347,8 @@ thousands of deployments.</p></li>
       Fallback link for browsers that, unlikely, don't support frames
     </a>
   </p>
-</iframe>
+</iframe></div></div>
+</div>
 <p>Spark 3.0 is the latest version now (20200918) and it should be seen as
 the latest step in the evolution of tools in the big data ecosystem as
 summarized in
